--- a/res/values-bn/strings.xml
+++ b/res/values-bn/strings.xml
@@ -219,11 +219,15 @@
     <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"অ্যাপ ভাষা"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"প্রতিটি অ্যাপের জন্য ভাষা সেট করুন"</string>
     <string name="app_locale_picker_title" msgid="8423365003726200684">"অ্যাপ ভাষা"</string>
+    <string name="warnings_title" msgid="613849105118598110">"অ্যাপ আপডেট করুন"</string>
+    <string name="warnings_summary" msgid="5600524378302608542">"উপলভ্য লেটেস্ট ভাষাগুলি পেতে অ্যাপ আপডেট করতে হবে"</string>
+    <string name="warnings_button_update" msgid="8819670776624561500">"এখনই আপডেট করুন"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"সাজেস্ট করা ভাষা"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"সব ভাষা"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"সিস্টেমের ভাষা"</string>
     <string name="preference_of_system_locale_summary" msgid="7828965109093154187">"সিস্টেম ডিফল্ট - <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g>"</string>
-    <string name="no_multiple_language_supported" msgid="1683023807955740826">"সাধারণত অ্যাপটি <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g> ভাষাতে সেট করা থাকে এবং একাধিক ভাষা ব্যবহার করা যায় না।"</string>
+    <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"এই অ্যাপের জন্য \'সেটিংস\' থেকে ভাষা বেছে নেওয়ার সুবিধা উপলভ্য নেই।"</string>
+    <string name="desc_disallow_locale_change_in_settings" msgid="8355972147053068698">"এই অ্যাপের জন্য \'সেটিংস\' থেকে আপনি কোনও ভাষা বেছে নিতে পারবেন না।"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="one">নির্বাচিত ভাষা সরাবেন?</item>
       <item quantity="other">নির্বাচিত ভাষা সরাবেন?</item>
@@ -338,7 +342,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"নিরাপত্তা স্ট্যাটাস"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"স্ক্রিন লক, Find My Device, অ্যাপ নিরাপত্তা"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"নিরাপত্তা এবং গোপনীয়তা"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"অনুমতি, স্ক্রিন লক, অ্যাপের নিরাপত্তা"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"ফেস যোগ করা হয়েছে"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"মুখ সেট আপ করতে ট্যাপ করুন"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"ফেস আনলক"</string>
@@ -454,6 +459,8 @@
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_4" msgid="4983770600405797515">"আপনি ও আপনার সন্তান ফিঙ্গারপ্রিন্টের ছবি ও মডেল মুছে ফেলতে পারেন অথবা যে কোনও সময় সেটিংস থেকে \'ফিঙ্গারপ্রিন্ট আনলক\' ফিচারটি বন্ধ করে দিতে পারেন। মুছে না ফেলা পর্যন্ত ফিঙ্গারপ্রিন্টের ছবি ও মডেল ফোনে সেভ করা থাকে।"</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_5" msgid="2018885671994058605">"আপনি না চাইলেও, ফোনটি আপনার আঙুলে ছুঁইয়ে অন্য কেউ আপনার ফোন আনলক করতে পারেন।"</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_5" msgid="8356551505082794682">"আপনার সন্তান না চাইলেও তার ফোন আনলক হয়ে যেতে পারে, যেমন যদি কেউ তার আঙুলটি ফিঙ্গারপ্রিন্টের নির্দিষ্ট জায়গায় ধরে।"</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_6" msgid="5314031490467481499">"সবচেয়ে ভাল ফলাফল পেতে, Google-এর জন্য তৈরি হিসেবে সার্টিফিকেট প্রাপ্ত একটি স্ক্রিন প্রোটেকটর ব্যবহার করুন। অন্য কোনও স্ক্রিন প্রোটেকটর ব্যবহার করলে, আপনার আঙ্গুলের ছাপ কাজ নাও করতে পারে।"</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_6" msgid="3563942520716110478">"সবচেয়ে ভাল ফলাফল পেতে, Google-এর জন্য তৈরি হিসেবে সার্টিফিকেট প্রাপ্ত একটি স্ক্রিন প্রোটেকটর ব্যবহার করুন। অন্য কোনও স্ক্রিন প্রোটেকটর ব্যবহার করলে, আপনার সন্তানের আঙ্গুলের ছাপ কাজ নাও করতে পারে।"</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_message_learn_more" msgid="5856010507790137793"></string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_try_adjusting" msgid="3855444121278320304">"প্রতিবার আপনার আঙ্গুলের অবস্থান সামান্য পরিবর্তন করুন"</string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_partially_detected" msgid="8330287007361798356">"আপনার আঙ্গুলের ছাপের মাঝখান দিয়ে আইকনটি ঢেকে দিন"</string>
@@ -507,7 +514,8 @@
     <string name="security_settings_fingerprint_enroll_repeat_message" msgid="5382958363770893577">"আপনার আঙ্গুলের ছাপের বিভিন্ন অংশ যোগ করার জন্য বারবার আঙুল তুলে আবার স্পর্শ করতে থাকুন"</string>
     <string name="security_settings_udfps_enroll_repeat_message" msgid="2213106975297867798">"প্রতিবার ফিঙ্গারপ্রিন্ট আইকনটি সরার সময় টাচ করে ধরে থাকুন। এইভাবে সহজে আপনার ফিঙ্গারপ্রিন্টের বেশিরভাগটাই ক্যাপচার করা যাবে।"</string>
     <string name="security_settings_udfps_enroll_fingertip_title" msgid="4123142574168831116">"সেন্সরে আপনার আঙুল ছোঁয়ান"</string>
-    <string name="security_settings_udfps_enroll_edge_title" msgid="6137605344819152477">"সবশেষে, আপনার আঙুলের প্রান্তভাগ ব্যবহার করুন"</string>
+    <string name="security_settings_udfps_enroll_left_edge_title" msgid="1944076382202470458">"আপনার আঙুলের বাঁদিকের প্রান্তটি রাখুন"</string>
+    <string name="security_settings_udfps_enroll_right_edge_title" msgid="9036744264606447490">"আপনার আঙুলের ডানদিকের প্রান্তটি রাখুন"</string>
     <string name="security_settings_udfps_enroll_edge_message" msgid="4455253923746607702">"সেন্সরের উপরে আপনার ফিঙ্গারপ্রিন্টের এক দিক ছুঁইয়ে ধরে রাখুন তারপর অন্য দিকটিও ছোঁয়ান এবং একই ভাবে ধরে রাখুন"</string>
     <string name="security_settings_udfps_enroll_repeat_a11y_message" msgid="2785464357615568197">"এইভাবে সহজে আপনার ফিঙ্গারপ্রিন্টের বেশিরভাগটাই ক্যাপচার করা যাবে"</string>
     <string name="security_settings_udfps_enroll_progress_a11y_message" msgid="6183535114682369699">"আঙ্গুলের ছাপ নথিভুক্ত করার কাজটি <xliff:g id="PERCENTAGE">%d</xliff:g> শতাংশ সম্পূর্ণ হয়েছে"</string>
@@ -579,10 +587,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" স্ক্রিন লক বিকল্প নিষ্ক্রিয় করা হয়েছে। আরো জানতে, আপনার প্রতিষ্ঠানের প্রশাসকের সাথে যোগাযোগ করুন। "<annotation id="admin_details">"আরো বিবরণ"</annotation>\n\n"আপনি এখনও কেনাকাটা করতে এবং অ্যাপের অ্যাক্সেস দিতে আপনার আঙ্গুলের ছাপ ব্যবহার করতে পারেন। "<annotation id="url">"আরো জানুন"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"আঙ্গুল তুলুন, তারপরে আবার সেন্সরে স্পর্শ করুন"</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"আঙ্গুলের ছাপের সেন্সর ব্যবহার করা যাচ্ছে না। একজন মেরামতি মিস্ত্রির কাছে যান"</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"উন্নত সেটিংস"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"অফিস প্রোফাইল লক করুন, Smart Lock"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"Smart Lock এবং আরও অনেক কিছু"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"উন্নত সেটিংস"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"আপনি <xliff:g id="COUNT">%d</xliff:g>টি পর্যন্ত আঙ্গুলের ছাপ যোগ করতে পারেন"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"আপনি অনুমোদিত সর্বোচ্চ সংখ্যক আঙ্গুলের ছাপ যোগ করেছেন"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"এর বেশি আঙ্গুলের ছাপ যোগ করা যাবে না"</string>
@@ -1905,8 +1917,7 @@
     <string name="module_license_title" msgid="8705484239826702828">"Google Play সিস্টেম আপডেট লাইসেন্স"</string>
     <string name="terms_title" msgid="2071742973672326073">"চুক্তি এবং শর্তাবলী"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"সিস্টেম ওয়েবভিউ লাইসেন্স"</string>
-    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
-    <skip />
+    <string name="wallpaper_attributions" msgid="4323659759250650736">"ওয়ালপেপার ক্রেডিট"</string>
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"উপগ্রহ ছবি প্রদানকারী:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"ম্যানুয়াল"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"ম্যানুয়াল লোড হওয়ার সময়ে একটি সমস্যা হয়েছে।"</string>
@@ -2057,8 +2068,7 @@
     <string name="enable_text" msgid="8570798764647110430">"সক্ষম করুন"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"স্টোরেজ সাফ করুন"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"আপডেটগুলি আনইনস্টল করুন"</string>
-    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
-    <skip />
+    <string name="app_restricted_settings_lockscreen_title" msgid="5993061278264872648">"বিধিনিষেধযুক্ত সেটিংসের অনুমতি দিন"</string>
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"আপনার বেছে নেওয়া কিছু অ্যাক্টিভিটি এই অ্যাপে ডিফল্ট হিসেবে খুলবে।"</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"আপনি এই অ্যাপ্লিকেশানটিকে উইজেটগুলিকে তৈরি করা এবং তাদের ডেটা অ্যাক্সেস করার মঞ্জুরি দেওয়া চয়ন করেছেন৷"</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"কোনো ডিফল্ট সেট করা নেই৷"</string>
@@ -2093,9 +2103,10 @@
     <string name="internal_storage" msgid="999496851424448809">"ইন্টারনাল স্টোরেজ"</string>
     <string name="recompute_size" msgid="1098091228370999128">"আকার আবার গণনা করা হচ্ছে..."</string>
     <string name="clear_data_dlg_title" msgid="180446967743732410">"অ্যাপ ডেটা মুছবেন?"</string>
-    <string name="clear_data_dlg_text" msgid="1107610960337399006">"এই অ্যাপের ডেটা স্থায়ীভাবে মুছে ফেলা হবে। এর মধ্যে ফাইল, সেটিংস, ডেটাবেস এবং অন্য অ্যাপ ডেটা আছে।"</string>
+    <string name="clear_data_dlg_text" msgid="3440011276559762619">"ফাইল এবং সেটিংস সহ এই অ্যাপের ডেটা এই ডিভাইস থেকে স্থায়ীভাবে মুছে ফেলা হবে"</string>
     <string name="dlg_ok" msgid="1421350367857960997">"ঠিক আছে"</string>
     <string name="dlg_cancel" msgid="5164705061530774899">"বাতিল"</string>
+    <string name="dlg_delete" msgid="1790919205039397659">"মুছুন"</string>
     <string name="app_not_found_dlg_title" msgid="7122106240981109930"></string>
     <string name="app_not_found_dlg_text" msgid="8634675268730513704">"অ্যাপ্লিকেশানটি ইনস্টল থাকা অ্যাপ্লিকেশানগুলির তালিকায় পাওয়া যায়নি।"</string>
     <string name="clear_failed_dlg_text" msgid="6866741916836125732">"অ্যাপের জন্য স্টোরেজ সাফ করা যায়নি।"</string>
@@ -4234,7 +4245,7 @@
     <string name="zen_mode_bypassing_apps_some_summary" msgid="1514572070650411509">"কিছু বিজ্ঞপ্তি"</string>
     <string name="zen_mode_bypassing_app_channels_header" msgid="4011017798712587373">"যে বিজ্ঞপ্তিগুলি \'বিরক্ত করবে না\' মোড এড়িয়ে নিজের কাজ করতে পারে"</string>
     <string name="zen_mode_bypassing_app_channels_toggle_all" msgid="1449462656358219116">"সব বিজ্ঞপ্তিকে অনুমতি দিন"</string>
-    <string name="zen_mode_other_sounds_summary" msgid="8784400697494837032">"{count,plural,offset:2 =0{কিছুই বাধা দিতে পারবে না}=1{{sound_category_1} বাধা দিতে পারবে}=2{{sound_category_1} ও {sound_category_2} বাধা দিতে পারবে}=3{{sound_category_1}, {sound_category_2} ও {sound_category_3} বাধা দিতে পারবে}one{{sound_category_1}, {sound_category_2}, ও #টি অ্যাপ বাধা দিতে পারবে}other{{sound_category_1}, {sound_category_2}, ও #টি অ্যাপ বাধা দিতে পারবে}}"</string>
+    <string name="zen_mode_other_sounds_summary" msgid="8784400697494837032">"{count,plural,offset:2 =0{কিছুই বাধা দিতে পারবে না}=1{{sound_category_1} বাধা দিতে পারবে}=2{{sound_category_1} ও {sound_category_2} বাধা দিতে পারবে}=3{{sound_category_1}, {sound_category_2} ও {sound_category_3} বাধা দিতে পারবে}one{{sound_category_1}, {sound_category_2} ও আরও #টি অ্যাপ বাধা দিতে পারবে}other{{sound_category_1}, {sound_category_2}, ও আরও #টি অ্যাপ বাধা দিতে পারবে}}"</string>
     <string name="zen_mode_sounds_none" msgid="6557474361948269420">"কেউ বাধা দিতে পারবে না"</string>
     <string name="zen_mode_people_none" msgid="4613147461974255046">"কেউই বাধা দিতে পারবে না"</string>
     <string name="zen_mode_people_some" msgid="9101872681298810281">"কিছু লোকজন বাধা দিতে পারবে"</string>
@@ -4279,7 +4290,7 @@
     <string name="suggestion_button_close" msgid="6865170855573283759">"বন্ধ করুন"</string>
     <string name="device_feedback" msgid="5351614458411688608">"এই ডিভাইসের সম্পর্কে মতামত পাঠান"</string>
     <string name="restr_pin_enter_admin_pin" msgid="4435410646541671918">"প্রশাসকের পিন লিখুন"</string>
-    <string name="switch_on_text" msgid="5664542327776075105">"চালু করুন"</string>
+    <string name="switch_on_text" msgid="5664542327776075105">"চালু আছে"</string>
     <string name="switch_off_text" msgid="1315547447393646667">"বন্ধ আছে"</string>
     <string name="nfc_setting_on" msgid="7701896496026725772">"চালু আছে"</string>
     <string name="nfc_setting_off" msgid="7142103438532732309">"বন্ধ আছে"</string>
@@ -4401,10 +4412,8 @@
       <item quantity="other">ব্যবহার হয়নি এমন <xliff:g id="COUNT_1">%d</xliff:g>টি অ্যাপ</item>
     </plurals>
     <string name="unused_apps_category" msgid="8954930958175500851">"ব্যবহার করা হয়নি এমন অ্যাপ সেটিংস"</string>
-    <!-- no translation found for unused_apps_switch (7595419855882245772) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch_summary (2171098908014596802) -->
-    <skip />
+    <string name="unused_apps_switch" msgid="7595419855882245772">"ব্যবহার না হলে অ্যাপ অ্যাক্টিভিটি পজ করুন"</string>
+    <string name="unused_apps_switch_summary" msgid="2171098908014596802">"অনুমতি সরান, অস্থায়ী ফাইল মুছুন এবং বিজ্ঞপ্তি বন্ধ করুন"</string>
     <string name="filter_all_apps" msgid="6645539744080251371">"সমস্ত অ্যাপ্লিকেশন"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"ইনস্টল করা অ্যাপগুলি"</string>
     <string name="filter_instant_apps" msgid="2292108467020380068">"ইনস্ট্যান্ট অ্যাপ"</string>
@@ -5060,10 +5069,8 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"এই ডিভাইসটি <xliff:g id="ORGANIZATION_NAME">%s</xliff:g> দ্বারা পরিচালিত।"</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"আরও জানুন"</string>
-    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
-    <skip />
-    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
-    <skip />
+    <string name="blocked_by_restricted_settings_title" msgid="7334715011474037399">"বিধিনিষেধযুক্ত সেটিংস"</string>
+    <string name="toast_allows_restricted_settings_successfully" msgid="1219116121291466102">"<xliff:g id="APP_NAME">%s</xliff:g> অ্যাপের জন্য বিধিনিষেধযুক্ত সেটিংসের অনুমতি আছে"</string>
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"আপনার নিরাপত্তার জন্য, এই সেটিং বর্তমানে উপলভ্য নয়।"</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"ফিনান্সড ডিভাইস তথ্য"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"আপনার ক্রেডিট প্রদানকারী এই ডিভাইসে সেটিংস পরিবর্তন এবং সফ্টওয়্যার ইনস্টল করতে পারবেন।\n\nআপনি কোনও পেমেন্ট সময়মতো না করলে, ডিভাইস লক হয়ে যাবে।\n\nআরও জানতে, ক্রেডিট প্রদানকারীর সাথে যোগাযোগ করুন।"</string>
@@ -5546,8 +5553,7 @@
     <string name="lockscreen_privacy_controls_summary" msgid="2769166101644452893">"লক স্ক্রিন থেকে এক্সটার্নাল ডিভাইসের নিয়ন্ত্রণ দেখান"</string>
     <string name="lockscreen_trivial_controls_setting_toggle" msgid="8211063535536295676">"লক করা ডিভাইস থেকে নিয়ন্ত্রণ করুন"</string>
     <string name="lockscreen_trivial_controls_summary" msgid="680581904143387225">"\'ডিভাইস কন্ট্রোল\' অ্যাপের অনুমতি থাকলে, ফোন বা ট্যাবলেট আনলক না করেই এক্সটার্নাল ডিভাইস নিয়ন্ত্রণ করতে পারবেন"</string>
-    <!-- no translation found for lockscreen_trivial_disabled_controls_summary (7593626010580689155) -->
-    <skip />
+    <string name="lockscreen_trivial_disabled_controls_summary" msgid="7593626010580689155">"ব্যবহার করতে, প্রথমে \"ডিভাইস নিয়ন্ত্রণ দেখুন\" বিকল্প চালু করুন"</string>
     <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"ডবল-লাইন ঘড়ি উপলভ্য থাকলে তা দেখান"</string>
     <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"ডবল-লাইন ঘড়ি"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
