--- a/res/values-am/strings.xml
+++ b/res/values-am/strings.xml
@@ -219,11 +219,15 @@
     <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"የመተግበሪያ ቋንቋዎች"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"ለእያንዳንዱ መተግበሪያ ቋንቋውን ያዘጋጁ"</string>
     <string name="app_locale_picker_title" msgid="8423365003726200684">"የመተግበሪያ ቋንቋ"</string>
+    <string name="warnings_title" msgid="613849105118598110">"መተግበሪያውን ያዘምኑ"</string>
+    <string name="warnings_summary" msgid="5600524378302608542">"ለቅርብ ጊዜዎቹ የሚገኙ ቋንቋዎች መተግበሪያውን ማዘመን ያስፈልግዎታል"</string>
+    <string name="warnings_button_update" msgid="8819670776624561500">"አሁን አዘምን"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"የተጠቆሙ ቋንቋዎች"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"ሁሉም ቋንቋዎች"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"የስርዓት ቋንቋ"</string>
     <string name="preference_of_system_locale_summary" msgid="7828965109093154187">"የሥርዓት ነባሪ - <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g>"</string>
-    <string name="no_multiple_language_supported" msgid="1683023807955740826">"መተግበሪያው በነባሪ ወደ <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g> ይቀናበራል እንዲሁም ብዙ ቋንቋዎችን አይደግፍም።"</string>
+    <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"ለዚህ መተግበሪያ የቋንቋ መረጣ ከቅንብሮች አይገኝም።"</string>
+    <string name="desc_disallow_locale_change_in_settings" msgid="8355972147053068698">"ለዚህ መተግበሪያ ከቅንብሮች ቋንቋ መምረጥ አይችሉም።"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="one">የተመረጡት ቋንቋዎች ይወገዱ?</item>
       <item quantity="other">የተመረጡት ቋንቋዎች ይወገዱ?</item>
@@ -338,7 +342,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"የደህንነት ሁኔታ"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"የማያ ገጽ መቆለፊያ፣ የእኔን መሣሪያ አግኝ፣ የመተግበሪያ ደኅንነት"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"ደህንነት እና ግላዊነት"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"ፈቃዶች፣ የማያ ገጽ መቆለፊያ፣ የመተግበሪያ ደህንነት"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"መልክ ታክሏል"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"መልክን ለማዋቀር መታ ያድርጉ"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"በመልክ መክፈት"</string>
@@ -454,6 +459,8 @@
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_4" msgid="4983770600405797515">"እርስዎ እና ልጅዎ የጣት አሻራቸውን ምስሎች እና ሞዴል መሰረዝ ወይም በቅንብሮች ውስጥ በማንኛውም ጊዜ በጣት አሻራ መክፈቻን ማጥፋት ትችላላችሁ። የጣት አሻራ ምስሎች እና ሞዴሎች እስኪሰረዙ ድረስ በስልኩ ላይ ይቀመጣሉ።"</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_5" msgid="2018885671994058605">"የእርስዎ ስልክ ለምሳሌ የሆነ ሰው በግድ ወደ እርስዎ ጣት ቢያስጠጋው እርስዎ ሳይፈለጉ ሊከፈት ይችላል።"</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_5" msgid="8356551505082794682">"ልጅዎ ሳይፈልጉ ስልካቸው ሊከፈት ይችላል፣ ለምሳሌ የሆነ ሰው ስልኩን ወደ ጣታቸው ቢያስጠጋው።"</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_6" msgid="5314031490467481499">"ለምርጥ ውጤቶች ለGoogle የተሰራ የተረጋገጠ የማያ ገጽ መከላከያን ይጠቀሙ። በሌሎች የማያ ገጽ መከላከያዎች አማካኝነት የጣት አሻራዎ ላይሰራ ይችላል።"</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_6" msgid="3563942520716110478">"ለምርጥ ውጤቶች ለGoogle የተሰራ የተረጋገጠ የማያ ገጽ መከላከያን ይጠቀሙ። በሌሎች የማያ ገጽ መከላከያዎች አማካኝነት የልጅዎ የጣት አሻራ ላይሰራ ይችላል።"</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_message_learn_more" msgid="5856010507790137793"></string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_try_adjusting" msgid="3855444121278320304">"በእያንዳንዱ ጊዜ የጣትዎን ቦታ በትንሹ ይለዋውጡ"</string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_partially_detected" msgid="8330287007361798356">"አዶውን በጣት አሻራዎ መሃል ይሸፍኑ"</string>
@@ -507,7 +514,8 @@
     <string name="security_settings_fingerprint_enroll_repeat_message" msgid="5382958363770893577">"የእርስዎን የጣት አሻራ የተለያዩ ክፍሎችን ለማከል ጣትዎትን ማንሳትና ማስቀመጥዎን ይቀጥሉ"</string>
     <string name="security_settings_udfps_enroll_repeat_message" msgid="2213106975297867798">"የጣት አሻራ አዶው በተንቀሳቀሰ ቁጥር ነክተው ይያዙት። ይህ ተጨማሪ የጣት አሻራዎን ክፍል እንዲይዝ ያግዛል።"</string>
     <string name="security_settings_udfps_enroll_fingertip_title" msgid="4123142574168831116">"የጣትዎን ላይኛው ጫፍ በዳሳሹ ላይ ያስቀምጡት"</string>
-    <string name="security_settings_udfps_enroll_edge_title" msgid="6137605344819152477">"በመጨረሻም፣ የጣትዎን ጠርዞች ይጠቀሙ"</string>
+    <string name="security_settings_udfps_enroll_left_edge_title" msgid="1944076382202470458">"የጣትዎን የግራ ጠርዝ ያስቀምጡ"</string>
+    <string name="security_settings_udfps_enroll_right_edge_title" msgid="9036744264606447490">"የጣትዎን የቀኝ ጠርዝ ያስቀምጡ"</string>
     <string name="security_settings_udfps_enroll_edge_message" msgid="4455253923746607702">"የጣት አሻራዎን ጎን በዳሳሹ ላይ አስቀምጠው ይያዙት፣ ከዚያ ወደ ሌላኛው ጎን ይቀይሩ"</string>
     <string name="security_settings_udfps_enroll_repeat_a11y_message" msgid="2785464357615568197">"ይህ ተጨማሪ የጣት አሻራዎን ክፍል እንዲይዝ ያግዛል"</string>
     <string name="security_settings_udfps_enroll_progress_a11y_message" msgid="6183535114682369699">"የጣት አሻራ <xliff:g id="PERCENTAGE">%d</xliff:g> መቶኛን በመመዝገብ ላይ"</string>
@@ -579,10 +587,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" የማያ ገጽ ቁልፍ አማራጩ ተሰናክሏል። ተጨማሪ ለማወቅ የድርጅትዎን አስተዳዳሪ ያነጋግሩ። "<annotation id="admin_details">"ተጨማሪ ዝርዝሮች"</annotation>\n\n"ለግዢዎች እና የመተግበሪያ መዳረሻ ፈቃድ ለመስጠት አሁንም የጣት አሻራዎን መጠቀም ይችላሉ። "<annotation id="url">"የበለጠ ለመረዳት"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"ጣትዎን ያንሱ፣ ከዚያ በድጋሚ ዳሳሽ ይንኩ"</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"የጣት አሻራ ዳሳሽን መጠቀም አይቻልም። የጥገና አገልግሎት ሰጪን ይጎብኙ"</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"የላቁ ቅንብሮች"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"የሥራ መገለጫ መቆለፊያ፣ Smart Lock"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"Smart Lock እና ተጨማሪ"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"የላቁ ቅንብሮች"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"እስከ <xliff:g id="COUNT">%d</xliff:g> የሚደርሱ የጣት አሻራዎችን ማከል ይችላሉ"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"የሚፈቀደውን ከፍተኛ የጣት አሻራ ብዛት አክለዋል"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"ተጨማሪ የጣት አሻራዎችን ማከል አይቻልም"</string>
@@ -1905,8 +1917,7 @@
     <string name="module_license_title" msgid="8705484239826702828">"የGoogle Play ስርዓት ዝማኔ ፈቃዶች"</string>
     <string name="terms_title" msgid="2071742973672326073">"ውሎች እና ደንቦች"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"የስርዓት WebView ፍቃድ"</string>
-    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
-    <skip />
+    <string name="wallpaper_attributions" msgid="4323659759250650736">"የልጣፍ ምስጋናዎች"</string>
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"የሳተላይት ምስሎች አቅራቢዎች፦\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"መመሪያ"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"መመሪያውን መጫን ላይ አንድ ችግር ነበር።"</string>
@@ -2057,8 +2068,7 @@
     <string name="enable_text" msgid="8570798764647110430">"አንቃ"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"ማከማቻን አጽዳ"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"አዘምኖች አትጫን"</string>
-    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
-    <skip />
+    <string name="app_restricted_settings_lockscreen_title" msgid="5993061278264872648">"የተገደቡ ቅንብሮችን ፍቀድ"</string>
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"እርስዎ የመረጧቸው አንዳንድ እንቅስቃሴዎች በነባሪነት በዚህ መተግበሪያ ውስጥ ይከፈታሉ።"</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"ይህ መተግበሪያ ፍርግሞችን ፈጥሮ ውሂባቸውን እንዲደርስ ይፈቅዳል።"</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"ምንም ነባሪዎች አልተዘጋጁም።"</string>
@@ -2093,9 +2103,10 @@
     <string name="internal_storage" msgid="999496851424448809">"የውስጥ ማከማቻ"</string>
     <string name="recompute_size" msgid="1098091228370999128">"መጠን ድጋሚ በማስላት ላይ..."</string>
     <string name="clear_data_dlg_title" msgid="180446967743732410">"መተግበሪያ ውሂብ ሰርዝ?"</string>
-    <string name="clear_data_dlg_text" msgid="1107610960337399006">"የዚህ መተግበሪያ ውሂብ እስከመጨረሻው ይሰረዛል። ይህ ፋይሎችን፣ ቅንብሮችን፣ የውሂብ ጎታን እና ሌላ የመተግበሪያ ውሂብን ያካትታል።"</string>
+    <string name="clear_data_dlg_text" msgid="3440011276559762619">"ፋይሎችን እና ቅንብሮችን ጨምሮ የዚህ መተግበሪያ ውሂብ እስከመጨረሻው ከዚህ መሳሪያ ይሰረዛል"</string>
     <string name="dlg_ok" msgid="1421350367857960997">"እሺ"</string>
     <string name="dlg_cancel" msgid="5164705061530774899">"ይቅር"</string>
+    <string name="dlg_delete" msgid="1790919205039397659">"ሰርዝ"</string>
     <string name="app_not_found_dlg_title" msgid="7122106240981109930"></string>
     <string name="app_not_found_dlg_text" msgid="8634675268730513704">"መተግበሪያው በተጫኑ መተግበሪያዎች ዝርዝር ውስጥ አልተገኘም።"</string>
     <string name="clear_failed_dlg_text" msgid="6866741916836125732">"ለመተግበሪያው ማከማቻን ማጽዳት አልተቻለም"</string>
@@ -2428,7 +2439,7 @@
     <string name="accessibility_display_inversion_preference_title" msgid="5476133104746207952">"ተቃራኒ ቀለም"</string>
     <string name="accessibility_display_inversion_switch_title" msgid="7458595722552743503">"የቀለም ግልበጣን ተጠቀም"</string>
     <string name="accessibility_display_inversion_shortcut_title" msgid="6889624526691513462">"የተቃራኒ ቀለም አቋራጭ"</string>
-    <string name="accessibility_display_inversion_preference_intro_text" msgid="1159663288481145318">"የቀለም ግልበጣ ብርሃን ማያ ገጾችን ወደ ጨለማ ይቀይራል። እንዲሁም የጨለማ ማያ ገጾች ብርሃንን ያበራል።"</string>
+    <string name="accessibility_display_inversion_preference_intro_text" msgid="1159663288481145318">"የተቃራኒ ቀለም ብርሃን ማያ ገጾችን ወደ ጨለማ ይቀይራል። እንዲሁም የጨለማ ማያ ገጾች ብርሃንን ያበራል።"</string>
     <string name="accessibility_display_inversion_preference_subtitle" msgid="4494767676482389509">"&lt;b&gt;ልብ ይበሉ&lt;/b&gt;&lt;br/&gt; &lt;ol&gt; &lt;li&gt; ቀለሞች በሚዲያ እና በምስሎች ይለወጣሉ&lt;/li&gt; &lt;li&gt; ተቃራኒ ቀለም በሁሉም መተግበሪያዎች ላይ ይሰራል&lt;/li&gt; &lt;li&gt; ጥቁር ዳራ ለማሳየት፣ በምትኩ ጠቆር ያለ ገጽታን መጠቀም ይቻላል&lt;/li&gt; &lt;/ol&gt;"</string>
     <string name="accessibility_autoclick_preference_title" msgid="2703143361605555752">"በራስ-ሰር ጠቅ አድርግ (መቆያ ጊዜ)"</string>
     <string name="accessibility_autoclick_about_title" msgid="152923024405552594">"ስለራስ-ሰር ጠቅ ማድረግ (መቆያ ጊዜ)"</string>
@@ -4401,10 +4412,8 @@
       <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g> ጥቅም ላይ ያልዋሉ መተግበሪያዎች</item>
     </plurals>
     <string name="unused_apps_category" msgid="8954930958175500851">"ስራ ላይ ያልዋሉ የመተግበሪያ ቅንብሮች"</string>
-    <!-- no translation found for unused_apps_switch (7595419855882245772) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch_summary (2171098908014596802) -->
-    <skip />
+    <string name="unused_apps_switch" msgid="7595419855882245772">"የመተግበሪያ እንቅስቃሴ ስራ ላይ ካልዋለ ባለበት አቁም"</string>
+    <string name="unused_apps_switch_summary" msgid="2171098908014596802">"ፈቃዶችን አስወግድ፣ ጊዜያዊ ፋይሎችን ሰርዝ እና ማሳወቂያዎችን አቁም"</string>
     <string name="filter_all_apps" msgid="6645539744080251371">"ሁሉም መተግበሪያዎች"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"የተጫኑ መተግበሪያዎች"</string>
     <string name="filter_instant_apps" msgid="2292108467020380068">"ቅጽበታዊ መተግበሪያዎች"</string>
@@ -5060,10 +5069,8 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"ይህ መሣሪያ በ<xliff:g id="ORGANIZATION_NAME">%s</xliff:g> የሚተዳደር ነው።"</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"የበለጠ መረዳት"</string>
-    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
-    <skip />
-    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
-    <skip />
+    <string name="blocked_by_restricted_settings_title" msgid="7334715011474037399">"የተገደበ ቅንብር"</string>
+    <string name="toast_allows_restricted_settings_successfully" msgid="1219116121291466102">"የተገደቡ ቅንብሮች ለ<xliff:g id="APP_NAME">%s</xliff:g> ተፈቅደዋል"</string>
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"ለእርስዎ ደህንነት ሲባል ይህ ቅንብር በአሁኑ ጊዜ አይገኝም።"</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"የገንዘብ ድጋፍ የተደረገለት የመሣሪያ መረጃ"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"ክሬዲት አቅራቢዎ በዚህ መሣሪያ ላይ ቅንብሮችን ሊለውጥ እና ሶፍትዌር ሊጭን ይችላል።\n\nክፍያ ካልፈጸሙ መሣሪያዎ ይቆለፋል።\n\nየበለጠ ለመረዳት ክሬዲት አቅራቢዎን ያነጋግሩ።"</string>
@@ -5546,8 +5553,7 @@
     <string name="lockscreen_privacy_controls_summary" msgid="2769166101644452893">"ከመቆለፊያ ማያ ገጽ ሆነው የውጫዊ መሣሪያዎች መቆጣጠሪያዎችን አሳይ"</string>
     <string name="lockscreen_trivial_controls_setting_toggle" msgid="8211063535536295676">"ከተቆለፈ መሣሪያ ሆነው ይቆጣጠሩ"</string>
     <string name="lockscreen_trivial_controls_summary" msgid="680581904143387225">"በመሣሪያው መቆጣጠሪያዎች መተግበሪያ ከተፈቀደ የእርስዎን ስልክ ወይም ጡባዊ ሳይከፍቱ ውጫዊ መሣሪያዎችን ይቆጣጠሩ"</string>
-    <!-- no translation found for lockscreen_trivial_disabled_controls_summary (7593626010580689155) -->
-    <skip />
+    <string name="lockscreen_trivial_disabled_controls_summary" msgid="7593626010580689155">"ለመጠቀም መጀመሪያ «የመሣሪያ መቆጣጠሪያዎችን አሳይ» የሚለውን ያብሩ"</string>
     <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"የሚገኝ ሲሆን ባለ ሁለት-መስመር ሰዓት አሳይ"</string>
     <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"ባለ ሁለት-መስመር ሰዓት"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
