--- a/res/values-be/strings.xml
+++ b/res/values-be/strings.xml
@@ -221,11 +221,15 @@
     <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Мовы праграмы"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Задаць мову для кожнай праграмы"</string>
     <string name="app_locale_picker_title" msgid="8423365003726200684">"Мова праграмы"</string>
+    <string name="warnings_title" msgid="613849105118598110">"Абнавіце праграму"</string>
+    <string name="warnings_summary" msgid="5600524378302608542">"Каб дадаць у праграму новыя даступныя мовы, яе трэба абнавіць"</string>
+    <string name="warnings_button_update" msgid="8819670776624561500">"Абнавіць"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Прапанаваныя мовы"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Усе мовы"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Сістэмная мова"</string>
     <string name="preference_of_system_locale_summary" msgid="7828965109093154187">"Стандартная сістэмная – <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g>"</string>
-    <string name="no_multiple_language_supported" msgid="1683023807955740826">"Для праграмы нельга задаць некалькі моў. Для яе зададзена наступная стандартная мова: <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g>."</string>
+    <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Выбар мовы для гэтай праграмы недаступны ў Наладах."</string>
+    <string name="desc_disallow_locale_change_in_settings" msgid="8355972147053068698">"Мову для гэтай праграмы нельга выбраць у Наладах."</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="one">Выдаліць выбраныя мовы?</item>
       <item quantity="few">Выдаліць выбраныя мовы?</item>
@@ -344,7 +348,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"Стан бяспекі"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"Блакіроўка экрана, Знайсці прыладу, бяспека праграм"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"Бяспека і прыватнасць"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"Дазволы, блакіроўка экрана, бяспека праграм"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"Твар дададзены"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"Націсніце, каб наладзіць распазнаванне твару"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"Распазнаванне твару"</string>
@@ -462,6 +467,8 @@
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_4" msgid="4983770600405797515">"Вы і ваша дзіця можаце ў любы час выдаліць відарысы і мадэль адбітка пальца ці выключыць разблакіраванне адбіткам пальца ў Наладах. Відарысы і мадэлі адбіткаў пальца будуць захоўвацца на тэлефоне, пакуль іх не выдаляць."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_5" msgid="2018885671994058605">"Ваш тэлефон можа быць разблакіраваны без вашага намеру, напрыклад, калі хтосьці паднясе яго да вашага пальца."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_5" msgid="8356551505082794682">"Тэлефон можна разблакіраваць, нават калі дзіця не збіралася гэта рабіць, напрыклад, калі хтосьці прыкладзе палец дзіцяці да тэлефона."</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_6" msgid="5314031490467481499">"Каб атрымліваць найлепшыя вынікі, карыстайцеся ахоўнай плёнкай, якая мае сертыфікат \"Made for Google\". Калі выкарыстоўваць іншыя ахоўныя плёнкі, сканер адбіткаў пальцаў можа не працаваць."</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_6" msgid="3563942520716110478">"Каб атрымліваць найлепшыя вынікі, карыстайцеся ахоўнай плёнкай, якая мае сертыфікат \"Made for Google\". Калі выкарыстоўваць іншыя ахоўныя плёнкі, сканер адбіткаў пальцаў вашага дзіцяці можа не працаваць."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_message_learn_more" msgid="5856010507790137793"></string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_try_adjusting" msgid="3855444121278320304">"Кожны раз крыху мяняйце пазіцыю пальца"</string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_partially_detected" msgid="8330287007361798356">"Накрыйце значок падушачкай пальца"</string>
@@ -515,7 +522,8 @@
     <string name="security_settings_fingerprint_enroll_repeat_message" msgid="5382958363770893577">"Дакраніцеся некалькі разоў, каб адбітак быў больш дакладны"</string>
     <string name="security_settings_udfps_enroll_repeat_message" msgid="2213106975297867798">"Кожны раз падчас руху значка адбітка пальца ўтрымлівайце палец націснутым. Гэта працэдура дапаможа больш дакладна зафіксаваць адбітак пальца."</string>
     <string name="security_settings_udfps_enroll_fingertip_title" msgid="4123142574168831116">"Прыкладзіце да датчыка кончык пальца"</string>
-    <string name="security_settings_udfps_enroll_edge_title" msgid="6137605344819152477">"Зараз прыкладзіце краі пальца"</string>
+    <string name="security_settings_udfps_enroll_left_edge_title" msgid="1944076382202470458">"Прыкладзіце палец левым краем"</string>
+    <string name="security_settings_udfps_enroll_right_edge_title" msgid="9036744264606447490">"Прыкладзіце палец правым краем"</string>
     <string name="security_settings_udfps_enroll_edge_message" msgid="4455253923746607702">"Прыкладзіце палец да датчыка адным бокам і ўтрымлівайце яго, потым павярніце іншым бокам"</string>
     <string name="security_settings_udfps_enroll_repeat_a11y_message" msgid="2785464357615568197">"Гэта працэдура дапаможа больш дакладна зафіксаваць адбітак пальца"</string>
     <!-- String.format failed for translation -->
@@ -589,10 +597,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" Опцыя блакіроўкі экрана выключана. Звяжыцеся з адміністратарам сваёй арганізацыі, каб даведацца больш. "<annotation id="admin_details">"Дадатковая інфармацыя"</annotation>\n\n"Вы па-ранейшаму можаце выкарыстоўваць адбіткі пальцаў для аўтарызацыі куплі і доступу да праграм. "<annotation id="url">"Даведацца больш"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"Падыміце палец, потым дакраніцеся да сканера зноў"</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"Не ўдалося скарыстаць сканер адбіткаў пальцаў. Звярніцеся ў сэрвісны цэнтр."</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"Пашыраныя налады"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"Блакіроўка працоўнага профілю, Smart Lock"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"Smart Lock і іншыя функцыі"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"Пашыраныя налады"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Вы можаце дадаць да <xliff:g id="COUNT">%d</xliff:g> адбіткаў пальца"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Вы дадалі максімальную колькасць адбіткаў пальцаў"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Немагчыма дадаць больш адбіткаў пальцаў"</string>
@@ -1951,8 +1963,7 @@
     <string name="module_license_title" msgid="8705484239826702828">"Ліцэнзіі абнаўлення сістэмы Google Play"</string>
     <string name="terms_title" msgid="2071742973672326073">"Умовы выкарыстання"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"Сістэмная ліцэнзія WebView"</string>
-    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
-    <skip />
+    <string name="wallpaper_attributions" msgid="4323659759250650736">"Звесткі пра шпалеры"</string>
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"Спадарожнікавыя фота:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"Кіраўніцтва"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"Не атрымлiваецца загрузіць кіраўніцтва."</string>
@@ -2107,8 +2118,7 @@
     <string name="enable_text" msgid="8570798764647110430">"Уключанае"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"Ачысціць сховішча"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"Выдаліць абнаўленні"</string>
-    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
-    <skip />
+    <string name="app_restricted_settings_lockscreen_title" msgid="5993061278264872648">"Дазволіць абмежаваныя налады"</string>
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"Некаторыя выбраныя вамі дзеянні стандартна адкрываюцца ў гэтай праграме."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"Вы дазволілі гэтаму дадатку ствараць віджэты і атрымліваць доступ да іх даных."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"Стандартныя налады не зададзены"</string>
@@ -2143,9 +2153,10 @@
     <string name="internal_storage" msgid="999496851424448809">"Унутраная памяць"</string>
     <string name="recompute_size" msgid="1098091228370999128">"Пераразлік памеру..."</string>
     <string name="clear_data_dlg_title" msgid="180446967743732410">"Выдаліць даныя праграмы?"</string>
-    <string name="clear_data_dlg_text" msgid="1107610960337399006">"Даныя гэтай праграмы (файлы, налады, базы даных і г. д.)  будуць выдалены назаўсёды."</string>
+    <string name="clear_data_dlg_text" msgid="3440011276559762619">"Даныя гэтай праграмы, у тым ліку файлы і налады, будуць канчаткова выдалены з гэтай прылады"</string>
     <string name="dlg_ok" msgid="1421350367857960997">"ОК"</string>
     <string name="dlg_cancel" msgid="5164705061530774899">"Скасаваць"</string>
+    <string name="dlg_delete" msgid="1790919205039397659">"Выдаліць"</string>
     <string name="app_not_found_dlg_title" msgid="7122106240981109930"></string>
     <string name="app_not_found_dlg_text" msgid="8634675268730513704">"Дадатак не знойдзены ў спісе ўсталяваных дадаткаў."</string>
     <string name="clear_failed_dlg_text" msgid="6866741916836125732">"Немагчыма ачысціць сховішча для праграмы."</string>
@@ -4529,10 +4540,8 @@
       <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g> праграмы не выкарыстоўваецца</item>
     </plurals>
     <string name="unused_apps_category" msgid="8954930958175500851">"Налады праграм, якія не выкарыстоўваліся"</string>
-    <!-- no translation found for unused_apps_switch (7595419855882245772) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch_summary (2171098908014596802) -->
-    <skip />
+    <string name="unused_apps_switch" msgid="7595419855882245772">"Прыпыніць дзеянні ў неактыўнай праграме"</string>
+    <string name="unused_apps_switch_summary" msgid="2171098908014596802">"Выдаліць дазволы, часовыя файлы і спыніць апавяшчэнні"</string>
     <string name="filter_all_apps" msgid="6645539744080251371">"Усе праграмы"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"Усталяваныя праграмы"</string>
     <string name="filter_instant_apps" msgid="2292108467020380068">"Імгненныя праграмы"</string>
@@ -5226,10 +5235,8 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"Гэта прылада знаходзіцца пад кіраваннем <xliff:g id="ORGANIZATION_NAME">%s</xliff:g>."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"Даведацца больш"</string>
-    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
-    <skip />
-    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
-    <skip />
+    <string name="blocked_by_restricted_settings_title" msgid="7334715011474037399">"Абмежаваная налада"</string>
+    <string name="toast_allows_restricted_settings_successfully" msgid="1219116121291466102">"Для праграмы \"<xliff:g id="APP_NAME">%s</xliff:g>\" дазволены абмежаваныя налады"</string>
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"У мэтах бяспекі гэта налада цяпер недаступная."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"Інфармацыя пра прафінансаваную прыладу"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"Кампанія-крэдытор можа змяніць налады гэтай прылады і ўсталяваць на яе пэўнае ПЗ.\n\nКалі вы прапусціце плацеж, ваша прылада будзе заблакіравана.\n\nКаб даведацца больш, звярніцеся да кампаніі-крэдытора."</string>
@@ -5726,8 +5733,7 @@
     <string name="lockscreen_privacy_controls_summary" msgid="2769166101644452893">"Паказваць на экране блакіроўкі налады знешніх прылад"</string>
     <string name="lockscreen_trivial_controls_setting_toggle" msgid="8211063535536295676">"Кіраванне з заблакіраванай прылады"</string>
     <string name="lockscreen_trivial_controls_summary" msgid="680581904143387225">"Дзякуючы праграме для кіравання прыладамі вы можаце кіраваць знешнімі прыладамі праз заблакіраваны тэлефон ці планшэт"</string>
-    <!-- no translation found for lockscreen_trivial_disabled_controls_summary (7593626010580689155) -->
-    <skip />
+    <string name="lockscreen_trivial_disabled_controls_summary" msgid="7593626010580689155">"Спачатку ўключыце \"Паказваць элементы кіравання прыладамі\""</string>
     <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"Паказваць двухрадковы дысплэй гадзінніка, калі ён даступны"</string>
     <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"Двухрадковы дысплэй гадзінніка"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
