--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -219,11 +219,15 @@
     <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Γλώσσες εφαρμογής"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Ορίστε τη γλώσσα για κάθε εφαρμογή"</string>
     <string name="app_locale_picker_title" msgid="8423365003726200684">"Γλώσσα εφαρμογής"</string>
+    <string name="warnings_title" msgid="613849105118598110">"Ενημέρωση της εφαρμογής"</string>
+    <string name="warnings_summary" msgid="5600524378302608542">"Πρέπει να ενημερ. την εφαρμ. για τις πιο πρόσφατες διαθέσιμες γλώσσες"</string>
+    <string name="warnings_button_update" msgid="8819670776624561500">"Ενημέρωση τώρα"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Προτεινόμενες γλώσσες"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Όλες οι γλώσσες"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Γλώσσα συστήματος"</string>
     <string name="preference_of_system_locale_summary" msgid="7828965109093154187">"Προεπιλογή συστήματος - <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g>"</string>
-    <string name="no_multiple_language_supported" msgid="1683023807955740826">"Η εφαρμογή έχει ρυθμιστεί στα <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g> από προεπιλογή και δεν υποστηρίζει πολλαπλές γλώσσες."</string>
+    <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Η δυνατότητα επιλογής γλώσσας για αυτήν την εφαρμογή δεν είναι διαθέσιμη από τις Ρυθμίσεις."</string>
+    <string name="desc_disallow_locale_change_in_settings" msgid="8355972147053068698">"Δεν είναι δυνατή η επιλογή κάποιας γλώσσας για αυτήν την εφαρμογή από τις Ρυθμίσεις."</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">Να αφαιρεθούν οι επιλεγμένες γλώσσες;</item>
       <item quantity="one">Να αφαιρεθεί η επιλεγμένη γλώσσα;</item>
@@ -338,7 +342,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"Κατάσταση ασφάλειας"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"Κλείδωμα οθόνης, Εύρεση συσκευής, ασφάλεια εφαρμογής"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"Ασφάλεια και απόρρητο"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"Άδειες, κλείδωμα οθόνης, ασφάλεια εφαρμογών"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"Προστέθηκε πρόσωπο"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"Πατήστε για ρύθμιση προσώπου"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"Ξεκλείδωμα με το πρόσωπο"</string>
@@ -454,6 +459,8 @@
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_4" msgid="4983770600405797515">"Εσείς και το παιδί σας μπορείτε να διαγράψετε τις εικόνες και το μοντέλο του δακτυλικού του αποτυπώματος ή να απενεργοποιήσετε το ξεκλείδωμα με δακτυλικό αποτύπωμα ανά πάσα στιγμή στις Ρυθμίσεις. Οι εικόνες και τα μοντέλα δακτυλικού αποτυπώματος αποθηκεύονται με ασφάλεια στο τηλέφωνο μέχρι να διαγραφούν."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_5" msgid="2018885671994058605">"Το τηλέφωνό σας μπορεί να ξεκλειδωθεί ακόμη και όταν δεν το σκοπεύετε, όπως εάν κάποιος το ακουμπήσει στο δάχτυλό σας."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_5" msgid="8356551505082794682">"Το τηλέφωνο του παιδιού σας μπορεί να ξεκλειδωθεί ακόμη και όταν δεν το σκοπεύει, όπως εάν κάποιος το ακουμπήσει στο δάχτυλό του."</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_6" msgid="5314031490467481499">"Για βέλτιστα αποτελέσματα, χρησιμοποιήστε ένα προστατευτικό οθόνης που έχει την πιστοποίηση Made for Google. Με άλλα προστατευτικά οθόνης ενδέχεται να μην λειτουργεί το δακτυλικό σας αποτύπωμα."</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_6" msgid="3563942520716110478">"Για βέλτιστα αποτελέσματα, χρησιμοποιήστε ένα προστατευτικό οθόνης που έχει την πιστοποίηση Made for Google. Με άλλα προστατευτικά οθόνης ενδέχεται να μην λειτουργεί το δακτυλικό αποτύπωμα του παιδιού σας."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_message_learn_more" msgid="5856010507790137793"></string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_try_adjusting" msgid="3855444121278320304">"Φροντίστε κάθε φορά να αλλάζετε ελαφρώς τη θέση του δακτύλου σας"</string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_partially_detected" msgid="8330287007361798356">"Καλύψτε με το δάκτυλό σας το εικονίδιο, φροντίζοντας το εικονίδιο να βρίσκεται στο κέντρο του δακτυλικού σας αποτυπώματος"</string>
@@ -507,7 +514,8 @@
     <string name="security_settings_fingerprint_enroll_repeat_message" msgid="5382958363770893577">"Συνεχίστε να ανασηκώνετε το δάχτυλό σας, για να προσθέσετε τα διάφορα τμήματα του δακτυλικού σας αποτυπώματος"</string>
     <string name="security_settings_udfps_enroll_repeat_message" msgid="2213106975297867798">"Αγγίζετε παρατεταμένα κάθε φορά που μετακινείται το εικονίδιο δακτυλικού αποτυπώματος. Με αυτόν τον τρόπο γίνεται καλύτερη λήψη του δακτυλικού σας αποτυπώματος."</string>
     <string name="security_settings_udfps_enroll_fingertip_title" msgid="4123142574168831116">"Τοποθετήστε το ακροδάχτυλό σας στον αισθητήρα"</string>
-    <string name="security_settings_udfps_enroll_edge_title" msgid="6137605344819152477">"Τέλος, χρησιμοποιήστε τα πλαϊνά άκρα του δαχτύλου σας"</string>
+    <string name="security_settings_udfps_enroll_left_edge_title" msgid="1944076382202470458">"Τοποθετήστε το αριστερό άκρο του δακτύλου σας"</string>
+    <string name="security_settings_udfps_enroll_right_edge_title" msgid="9036744264606447490">"Τοποθετήστε το δεξί άκρο του δακτύλου σας"</string>
     <string name="security_settings_udfps_enroll_edge_message" msgid="4455253923746607702">"Τοποθετήστε τη μία πλευρά του δακτυλικού σας αποτυπώματος στον αισθητήρα και αγγίξτε παρατεταμένα, μετά τοποθετήστε την άλλη πλευρά"</string>
     <string name="security_settings_udfps_enroll_repeat_a11y_message" msgid="2785464357615568197">"Με αυτόν τον τρόπο γίνεται καλύτερη λήψη του δακτυλικού σας αποτυπώματος"</string>
     <string name="security_settings_udfps_enroll_progress_a11y_message" msgid="6183535114682369699">"Εγγραφή δακτυλικού αποτυπώματος <xliff:g id="PERCENTAGE">%d</xliff:g> τοις εκατό"</string>
@@ -579,10 +587,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" Η επιλογή κλειδώματος οθόνης είναι απενεργοποιημένη. Για να μάθετε περισσότερα, επικοινωνήστε με τον διαχειριστή της εφαρμογής σας. "<annotation id="admin_details">"Περισσότερες λεπτομέρειες"</annotation>\n\n"Μπορείτε να εξακολουθήσετε να χρησιμοποιείτε το δακτυλικό αποτύπωμα για την εξουσιοδότηση αγορών και την πρόσβαση εφαρμογών. "<annotation id="url">"Μάθετε περισσότερα"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"Σηκώστε το δάχτυλο και, στη συνέχεια, αγγίξτε ξανά τον αισθητήρα"</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"Δεν είναι δυνατή η χρήση του αισθητήρα δακτ. αποτυπωμ. Επισκεφτείτε έναν πάροχο υπηρεσιών επισκευής."</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"Σύνθετες ρυθμίσεις"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"Κλείδωμα προφίλ εργασίας, Smart Lock"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"Smart Lock και άλλα"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"Σύνθετες ρυθμίσεις"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Μπορείτε να προσθέσετε έως <xliff:g id="COUNT">%d</xliff:g> μοναδικά χαρακτηριστικά"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Έχετε προσθέσει τον μέγιστο αριθμό δακτυλικών αποτυπωμάτων"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Δεν είναι δυνατή η προσθήκη περισσότερων δακτυλικών αποτυπωμάτων"</string>
@@ -1389,7 +1401,7 @@
     <string name="dark_ui_activation_on_auto" msgid="4824339634784765049">"Ενεργοποίηση έως την ανατολή του ηλίου"</string>
     <string name="dark_ui_activation_off_auto" msgid="9136717444658505208">"Απενεργοποίηση έως τη δύση του ηλίου"</string>
     <string name="dark_ui_title" msgid="3373976268671557416">"Λειτουργία χαμηλού φωτισμού"</string>
-    <string name="dark_ui_auto_mode_title" msgid="9027528859262295099">"Χρονοδιάγραμμα"</string>
+    <string name="dark_ui_auto_mode_title" msgid="9027528859262295099">"Πρόγραμμα"</string>
     <string name="dark_ui_auto_mode_never" msgid="3980412582267787662">"Δεν υπάρχει"</string>
     <string name="dark_ui_auto_mode_auto" msgid="6658909029498623375">"Ενεργό από τη δύση ως το πρωι"</string>
     <string name="dark_ui_auto_mode_custom" msgid="3800138185265182170">"Ενεργοποίηση σε προσαρμ. ώρα"</string>
@@ -2091,9 +2103,10 @@
     <string name="internal_storage" msgid="999496851424448809">"Εσ. αποθ. χώρος"</string>
     <string name="recompute_size" msgid="1098091228370999128">"Εκ νέου υπολογισμός μεγέθους..."</string>
     <string name="clear_data_dlg_title" msgid="180446967743732410">"Διαγραφή δεδομένων εφαρμογής;"</string>
-    <string name="clear_data_dlg_text" msgid="1107610960337399006">"Τα δεδομένα αυτής της εφαρμογής θα διαγραφούν οριστικά. Σε αυτά περιλαμβάνονται αρχεία, ρυθμίσεις, βάσεις δεδομένων και άλλα δεδομένα εφαρμογών."</string>
+    <string name="clear_data_dlg_text" msgid="3440011276559762619">"Τα δεδομένα της εφαρμογής, συμπεριλαμβανομένων των αρχείων και των ρυθμίσεων, θα διαγραφούν οριστικά από αυτήν τη συσκευή"</string>
     <string name="dlg_ok" msgid="1421350367857960997">"OK"</string>
     <string name="dlg_cancel" msgid="5164705061530774899">"Ακύρωση"</string>
+    <string name="dlg_delete" msgid="1790919205039397659">"Διαγραφή"</string>
     <string name="app_not_found_dlg_title" msgid="7122106240981109930"></string>
     <string name="app_not_found_dlg_text" msgid="8634675268730513704">"Η εφαρμογή δεν βρέθηκε στη λίστα με τις εγκατεστημένες εφαρμογές."</string>
     <string name="clear_failed_dlg_text" msgid="6866741916836125732">"Δεν ήταν δυνατή η διαγραφή αποθηκευτικού χώρου για την εφαρμογή."</string>
@@ -3668,7 +3681,7 @@
     <string name="keywords_media_vibration" msgid="723896490102792327">"απτική λειτουργία, δόνηση, ευαισθησία, μέσα"</string>
     <string name="keywords_vibration" msgid="670455132028025952">"απτική λειτουργία, δόνηση"</string>
     <string name="keywords_battery_saver_sticky" msgid="1646191718840975110">"εξοικονόμηση μπαταρίας, σταθερή, μόνιμη, εξοικονόμηση ενέργειας, μπαταρία"</string>
-    <string name="keywords_battery_saver_schedule" msgid="8240483934368455930">"ρουτίνα, χρονοδιάγραμμα, εξοικονόμηση μπαταρίας, εξοικονόμηση ενέργειας, μπαταρία, αυτόματα, ποσοστό"</string>
+    <string name="keywords_battery_saver_schedule" msgid="8240483934368455930">"ρουτίνα, πρόγραμμα, εξοικονόμηση μπαταρίας, εξοικονόμηση ενέργειας, μπαταρία, αυτόματα, ποσοστό"</string>
     <string name="keywords_enhance_4g_lte" msgid="658889360486800978">"volte, σύνθετες λειτουργίες κλήσης, κλήσεις 4g"</string>
     <string name="keywords_nr_advanced_calling" msgid="4157823099610141014">"vo5g, vonr, σύνθετες λειτουργίες κλήσης, κλήση 5g"</string>
     <string name="keywords_add_language" msgid="1882751300359939436">"προσθήκη γλώσσας, προσθέστε μια γλώσσα"</string>
@@ -3719,7 +3732,7 @@
     <string name="spatial_summary_off" msgid="8272678804629774378">"Ανενεργή"</string>
     <string name="spatial_summary_on_one" msgid="6239933399496282994">"Ενεργή / <xliff:g id="OUTPUT_DEVICE">%1$s</xliff:g>"</string>
     <string name="spatial_summary_on_two" msgid="4526919818832483883">"Ενεργή / <xliff:g id="OUTPUT_DEVICE_0">%1$s</xliff:g> και <xliff:g id="OUTPUT_DEVICE_1">%2$s</xliff:g>"</string>
-    <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{Κανένα}=1{Ορίστηκε ένα χρονοδιάγραμμα.}other{Ορίστηκαν # χρονοδιαγράμματα.}}"</string>
+    <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{Κανένα}=1{Ορίστηκε ένα πρόγραμμα.}other{Ορίστηκαν # προγράμματα.}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"Μην ενοχλείτε"</string>
     <string name="zen_mode_settings_summary" msgid="6040862775514495191">"Λήψη ειδοποιήσεων μόνο από σημαντικά άτομα και εφαρμογές"</string>
     <string name="zen_mode_slice_subtitle" msgid="6849372107272604160">"Περιορισμός διακοπών"</string>
@@ -3792,7 +3805,7 @@
     <string name="zen_mode_duration_summary_forever" msgid="5551992961329998606">"Μέχρι την απενεργοποίηση"</string>
     <string name="zen_mode_duration_summary_time_hours" msgid="2602655749780428308">"{count,plural, =1{Μία ώρα}other{# ώρες}}"</string>
     <string name="zen_mode_duration_summary_time_minutes" msgid="5755536844016835693">"{count,plural, =1{Ένα λεπτό}other{# λεπτά}}"</string>
-    <string name="zen_mode_sound_summary_off" msgid="7350437977839985836">"{count,plural, =0{Ανενεργό}=1{Ανενεργό / Ένα χρονοδιάγραμμα μπορεί να ενεργοποιηθεί αυτόματα.}other{Ανενεργό / # χρονοδιαγράμματα μπορούν να ενεργοποιηθούν αυτόματα.}}"</string>
+    <string name="zen_mode_sound_summary_off" msgid="7350437977839985836">"{count,plural, =0{Ανενεργό}=1{Ανενεργό / Ένα πρόγραμμαμπορεί να ενεργοποιηθεί αυτόματα.}other{Ανενεργό / # προγράμματα μπορούν να ενεργοποιηθούν αυτόματα.}}"</string>
     <string name="zen_category_behavior" msgid="3214056473947178507">"Τι μπορεί να διακόπτει τη λειτουργία Μην ενοχλείτε"</string>
     <string name="zen_category_people" msgid="8252926021894933047">"Άτομα"</string>
     <string name="zen_category_apps" msgid="1167374545618451925">"Εφαρμογές"</string>
@@ -4399,10 +4412,8 @@
       <item quantity="one"><xliff:g id="COUNT_0">%d</xliff:g> εφαρμογή που δεν χρησιμοποιείται</item>
     </plurals>
     <string name="unused_apps_category" msgid="8954930958175500851">"Ρυθμίσεις μη χρησιμοποιούμενων εφαρμογών"</string>
-    <!-- no translation found for unused_apps_switch (7595419855882245772) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch_summary (2171098908014596802) -->
-    <skip />
+    <string name="unused_apps_switch" msgid="7595419855882245772">"Παύση δραστηριότητας αδρανούς εφαρμογής"</string>
+    <string name="unused_apps_switch_summary" msgid="2171098908014596802">"Κατάργηση αδειών, διαγραφή προσωρινών αρχείων και διακοπή ειδοποιήσεων"</string>
     <string name="filter_all_apps" msgid="6645539744080251371">"Όλες οι εφαρμογές"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"Εγκατεστημένες εφαρμογές"</string>
     <string name="filter_instant_apps" msgid="2292108467020380068">"Instant Εφαρμογές"</string>
@@ -5542,8 +5553,7 @@
     <string name="lockscreen_privacy_controls_summary" msgid="2769166101644452893">"Εμφάνιση στοιχείων ελέγχου για εξωτερικές συσκευές από την οθόνη κλειδώματος"</string>
     <string name="lockscreen_trivial_controls_setting_toggle" msgid="8211063535536295676">"Έλεγχος από κλειδωμένη συσκευή"</string>
     <string name="lockscreen_trivial_controls_summary" msgid="680581904143387225">"Ελέγξτε εξωτερικές συσκευές χωρίς να ξεκλειδώσετε το τηλέφωνο ή το tablet, εάν αυτό επιτρέπεται από την εφαρμογή στοιχείων ελέγχου της συσκευής"</string>
-    <!-- no translation found for lockscreen_trivial_disabled_controls_summary (7593626010580689155) -->
-    <skip />
+    <string name="lockscreen_trivial_disabled_controls_summary" msgid="7593626010580689155">"Για χρήση, ενεργοποιήστε πρώτα την επιλογή Εμφάνιση στοιχείων ελέγχου συσκευής"</string>
     <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"Εμφάνιση ρολογιού διπλής γραμμής όταν είναι διαθέσιμο"</string>
     <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"Ρολόι διπλής γραμμής"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
@@ -5657,7 +5667,7 @@
     <string name="night_light_main_switch_title" msgid="3428298022467805219">"Χρήση Νυχτερινού φωτισμού"</string>
     <string name="nfc_main_switch_title" msgid="6295839988954817432">"Χρήση NFC"</string>
     <string name="adaptive_battery_main_switch_title" msgid="3127477920505485813">"Χρήση Προσαρμοστικής μπαταρίας"</string>
-    <string name="adaptive_brightness_main_switch_title" msgid="2681666805191642737">"Χρήση Προσαρμοστική φωτεινότητας"</string>
+    <string name="adaptive_brightness_main_switch_title" msgid="2681666805191642737">"Χρήση προσαρμοστικής φωτεινότητας"</string>
     <string name="wifi_calling_main_switch_title" msgid="4070224008346815634">"Χρήση κλήσης Wi‑Fi"</string>
     <string name="default_see_all_apps_title" msgid="7481113230662612178">"Εμφάνιση όλων των εφαρμογών"</string>
     <string name="smart_forwarding_title" msgid="8368634861971949799">"Έξυπνη προώθηση"</string>
