--- a/res/values-km/strings.xml
+++ b/res/values-km/strings.xml
@@ -219,11 +219,15 @@
     <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"ភាសាកម្មវិធី"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"កំណត់ភាសាសម្រាប់កម្មវិធីនីមួយៗ"</string>
     <string name="app_locale_picker_title" msgid="8423365003726200684">"ភាសា​កម្មវិធី"</string>
+    <string name="warnings_title" msgid="613849105118598110">"ដំឡើងកំណែ​កម្មវិធី"</string>
+    <string name="warnings_summary" msgid="5600524378302608542">"អ្នកត្រូវដំឡើងកំណែកម្មវិធី ទើបអាចប្រើភាសាដែលមានថ្មីៗបំផុត"</string>
+    <string name="warnings_button_update" msgid="8819670776624561500">"ដំឡើងកំណែ​ឥឡូវនេះ"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"ភាសា​ដែល​បាន​ណែ​នាំ"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"ភាសាទាំងអស់"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"ភាសាប្រព័ន្ធ"</string>
     <string name="preference_of_system_locale_summary" msgid="7828965109093154187">"លំនាំ​ដើម​ប្រព័ន្ធ - <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g>"</string>
-    <string name="no_multiple_language_supported" msgid="1683023807955740826">"កម្មវិធីនេះត្រូវបានកំណត់ទៅភាសា<xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g>តាមលំនាំដើម និងមិនអាចប្រើពហុភាសាបានទេ។"</string>
+    <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"មិនអាចជ្រើសរើសភាសាសម្រាប់កម្មវិធីនេះពីការកំណត់បានទេ។"</string>
+    <string name="desc_disallow_locale_change_in_settings" msgid="8355972147053068698">"អ្នកមិនអាចជ្រើសរើសភាសាសម្រាប់កម្មវិធីនេះពីការកំណត់បានទេ។"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">លុបភាសាដែលបានជ្រើសរើសឬ?</item>
       <item quantity="one">លុបភាសាដែលបានជ្រើសរើសឬ?</item>
@@ -338,7 +342,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"ស្ថានភាព​សុវត្ថិភាព"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"ការចាក់សោ​អេក្រង់ កម្មវិធី​រកឧបករណ៍របស់ខ្ញុំ សុវត្ថិភាព​កម្មវិធី"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"សុវត្ថិភាព និងឯកជនភាព"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"ការអនុញ្ញាត ចាក់សោអេក្រង់ សុវត្ថិភាពកម្មវិធី"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"បាន​បញ្ចូល​មុខ"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"ចុចដើម្បី​រៀបចំ​មុខ"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"ដោះ​សោ​តាម​​ទម្រង់​មុខ"</string>
@@ -454,6 +459,8 @@
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_4" msgid="4983770600405797515">"អ្នក និងកូនរបស់អ្នកអាច​លុបគំរូ និងរូបភាព​ស្នាមម្រាមដៃរបស់គាត់ ឬបិទ​ការដោះសោ​ដោយប្រើស្នាមម្រាមដៃ​បានគ្រប់ពេល​នៅក្នុង​ការកំណត់។ គំរូ និងរូបភាពស្នាមម្រាមដៃត្រូវបានរក្សាទុកនៅលើទូរសព្ទ រហូតទាល់តែគំរូ និងរូបភាព​ស្នាមម្រាមដៃទាំងនោះត្រូវបានលុប។"</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_5" msgid="2018885671994058605">"ទូរសព្ទ​របស់អ្នក​អាចត្រូវបាន​ដោះសោ នៅពេលដែល​អ្នកមិនមានបំណងដោះសោ​ ដូចជា​ប្រសិនបើ​នរណាម្នាក់​លើកវាមកប៉ះនឹង​ម្រាមដៃ​របស់អ្នក​ជាដើម។"</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_5" msgid="8356551505082794682">"ទូរសព្ទ​របស់កូនអ្នក​អាចត្រូវបាន​ដោះសោ ទោះបីជា​គាត់មិនមានបំណងដោះសោក៏ដោយដូចជា ប្រសិនបើ​នរណាម្នាក់​លើកវាមកប៉ះនឹង​ម្រាមដៃ​របស់គាត់​ជាដើម។"</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_6" msgid="5314031490467481499">"ដើម្បីទទួលបាន​លទ្ធផល​ល្អបំផុត សូមប្រើកញ្ចក់​ការពារ​អេក្រង់​ដែលបានទទួលស្គាល់​ពី Made for Google។ តាមរយៈ​កញ្ចក់​ការពារ​អេក្រង់ផ្សេងទៀត ស្នាមម្រាមដៃរបស់អ្នកអាចមិនដំណើរការ។"</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_6" msgid="3563942520716110478">"ដើម្បីទទួលបាន​លទ្ធផល​ល្អបំផុត សូមប្រើកញ្ចក់​ការពារ​អេក្រង់​ដែលបានទទួលស្គាល់​ពី Made for Google។ តាមរយៈ​កញ្ចក់​ការពារ​អេក្រង់ផ្សេងទៀត ស្នាមម្រាមដៃរបស់អ្នកអាចមិនដំណើរការ។"</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_message_learn_more" msgid="5856010507790137793"></string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_try_adjusting" msgid="3855444121278320304">"ប្ដូរទីតាំងម្រាមដៃ​របស់អ្នកតិចៗ​គ្រប់ពេល"</string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_partially_detected" msgid="8330287007361798356">"ដាក់ផ្នែកកណ្ដាល​នៃស្នាមម្រាមដៃ​របស់អ្នកលើរូបតំណាង"</string>
@@ -507,7 +514,8 @@
     <string name="security_settings_fingerprint_enroll_repeat_message" msgid="5382958363770893577">"បន្តលើកម្រាមដៃឡើង ដើម្បីបញ្ចូលផ្នែកផ្សេងទៀតនៃស្នាមម្រាមដៃរបស់អ្នក"</string>
     <string name="security_settings_udfps_enroll_repeat_message" msgid="2213106975297867798">"ចុចឱ្យជាប់ រាល់ពេលដែល​រូបស្នាមម្រាមដៃ​មានចលនា។ ការធ្វើបែបនេះ​ជួយថតស្នាមម្រាមដៃ​របស់អ្នក​បានកាន់តែច្រើន។"</string>
     <string name="security_settings_udfps_enroll_fingertip_title" msgid="4123142574168831116">"ដាក់ចុងម្រាមដៃ​របស់អ្នក​នៅលើឧបករណ៍​ចាប់សញ្ញា"</string>
-    <string name="security_settings_udfps_enroll_edge_title" msgid="6137605344819152477">"ចុងក្រោយ ដាក់គែមម្រាមដៃរបស់អ្នក"</string>
+    <string name="security_settings_udfps_enroll_left_edge_title" msgid="1944076382202470458">"ដាក់​ចុងខាងឆ្វេងនៃ​ម្រាមដៃ​របស់អ្នក"</string>
+    <string name="security_settings_udfps_enroll_right_edge_title" msgid="9036744264606447490">"ដាក់​ចុងខាងស្ដាំនៃ​ម្រាមដៃ​របស់អ្នក"</string>
     <string name="security_settings_udfps_enroll_edge_message" msgid="4455253923746607702">"ដាក់​ផ្នែកចំហៀង​នៃស្នាមម្រាមដៃ​របស់អ្នក​នៅលើ​ឧបករណ៍​ចាប់សញ្ញា​ឱ្យជាប់ រួចប្ដូរទៅ​ផ្នែកម្ខាងទៀត"</string>
     <string name="security_settings_udfps_enroll_repeat_a11y_message" msgid="2785464357615568197">"ការធ្វើបែបនេះ​ជួយថតស្នាមម្រាមដៃ​របស់អ្នក​បានកាន់តែច្រើន"</string>
     <string name="security_settings_udfps_enroll_progress_a11y_message" msgid="6183535114682369699">"កំពុងចុះឈ្មោះ​ស្នាមម្រាមដៃ <xliff:g id="PERCENTAGE">%d</xliff:g> ភាគរយ"</string>
@@ -579,10 +587,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" ជម្រើសចាក់​សោ​អេក្រង់​ត្រូវបាន​បិទ។ ដើម្បីស្វែងយល់បន្ថែម សូមទាក់ទងអ្នកគ្រប់គ្រងរបស់​សា្ថប័នអ្នក។ "<annotation id="admin_details">"ព័ត៌មានលម្អិតបន្ថែម"</annotation>\n\n"អ្នកនៅតែអាចប្រើស្នាមម្រាមដៃ ដើម្បីផ្តល់សិទ្ធិលើការទិញ និងការចូលប្រើប្រាស់កម្មវីធីបានដដែល។ "<annotation id="url">"ស្វែងយល់បន្ថែម"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"លើកម្រាមដៃ ហើយបន្ទាប់មកប៉ះឧបករណ៍ចាប់សញ្ញាម្តងទៀត"</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"មិនអាចប្រើ​ឧបករណ៍ចាប់ស្នាមម្រាមដៃ​បានទេ។ សូមទាក់ទង​ក្រុមហ៊ុនផ្ដល់​ការជួសជុល"</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"ការកំណត់​កម្រិតខ្ពស់"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"ការចាក់សោកម្រងព័ត៌មានការងារ, Smart Lock"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"Smart Lock និងអ្វីៗជាច្រើនទៀត"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"ការកំណត់​កម្រិតខ្ពស់"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"អ្នកអាចបន្ថែមស្នាមម្រាមដៃរហូតដល់ <xliff:g id="COUNT">%d</xliff:g>"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"អ្នក​បាន​បញ្ចូល​ស្នាម​ម្រាមដៃ​ដល់​ចំនួន​អតិបរមា​ហើយ"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"មិន​អាច​បញ្ចូល​ស្នាម​ម្រាមដៃ​បាន​ទៀត​ទេ"</string>
@@ -1905,8 +1917,7 @@
     <string name="module_license_title" msgid="8705484239826702828">"អាជ្ញាបណ្ណបច្ចុប្បន្នភាព​ប្រព័ន្ធ Google Play"</string>
     <string name="terms_title" msgid="2071742973672326073">"លក្ខខណ្ឌ"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"អាជ្ញាប័ណ្ណ System WebView"</string>
-    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
-    <skip />
+    <string name="wallpaper_attributions" msgid="4323659759250650736">"ក្រេឌីត​ផ្ទាំងរូបភាព"</string>
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"ក្រុមហ៊ុន​ផ្ដល់​សេវា​រូបភាព​ផ្កាយ​រណប​៖\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"ឯកសារណែនាំ"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"មានបញ្ហាក្នុងការបើកឯកសារណែនាំ"</string>
@@ -2057,8 +2068,7 @@
     <string name="enable_text" msgid="8570798764647110430">"បើក"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"សម្អាត​ទំហំ​ផ្ទុក"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"លុប​បច្ចុប្បន្នភាព"</string>
-    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
-    <skip />
+    <string name="app_restricted_settings_lockscreen_title" msgid="5993061278264872648">"អនុញ្ញាត​ការកំណត់​ដែលបានរឹតបន្តឹង"</string>
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"សកម្មភាពមួយចំនួន​ដែលអ្នកបានជ្រើសរើស​បើកនៅក្នុងកម្មវិធីនេះ​តាមលំនាំដើម។"</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"អ្នក​បាន​ជ្រើស​ឲ្យ​កម្មវិធី​នេះ​បង្កើត​ធាតុ​ក្រាហ្វិក និង​ចូល​ដំណើរការ​ទិន្នន័យ​របស់​វា។"</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"គ្មាន​ការ​កំណត់​លំនាំដើម។"</string>
@@ -2093,9 +2103,10 @@
     <string name="internal_storage" msgid="999496851424448809">"ឧបករណ៍​ខាង​ក្នុង"</string>
     <string name="recompute_size" msgid="1098091228370999128">"កំពុង​គណនា​ទំហំ​ឡើងវិញ…"</string>
     <string name="clear_data_dlg_title" msgid="180446967743732410">"លុប​ទិន្នន័យ​កម្មវិធី?"</string>
-    <string name="clear_data_dlg_text" msgid="1107610960337399006">"ទិន្នន័យ​របស់កម្មវិធីនេះ​នឹងត្រូវបានលុប​ជាអចិន្ត្រៃយ៍។ ទិន្នន័យនេះ​រួមមាន​ឯកសារ ការកំណត់ មូលដ្ឋាន​ទិន្នន័យ និង​ទិន្នន័យកម្មវិធី​ផ្សេងទៀត។"</string>
+    <string name="clear_data_dlg_text" msgid="3440011276559762619">"ទិន្នន័យ​របស់កម្មវិធីនេះ រួមទាំង​ឯកសារនិងការកំណត់​នឹងត្រូវលុបចេញពី​ឧបករណ៍នេះ​ជាអចិន្ត្រៃយ៍"</string>
     <string name="dlg_ok" msgid="1421350367857960997">"យល់​ព្រម​"</string>
     <string name="dlg_cancel" msgid="5164705061530774899">"បោះ​បង់​"</string>
+    <string name="dlg_delete" msgid="1790919205039397659">"លុប"</string>
     <string name="app_not_found_dlg_title" msgid="7122106240981109930"></string>
     <string name="app_not_found_dlg_text" msgid="8634675268730513704">"រក​មិន​ឃើញ​កម្មវិធី​ក្នុង​បញ្ជី​កម្មវិធី​បាន​ដំឡើង។"</string>
     <string name="clear_failed_dlg_text" msgid="6866741916836125732">"មិនអាច​សម្អាត​ទំហំផ្ទុក​សម្រាប់​កម្មវិធី​បានទេ។"</string>
@@ -2234,7 +2245,7 @@
     <string name="user_dict_settings_add_word_hint" msgid="4560494723256242785">"បញ្ចូល​ពាក្យ"</string>
     <string name="user_dict_settings_add_shortcut_hint" msgid="6209624157217434640">"ផ្លូវកាត់​ជម្រើស"</string>
     <string name="user_dict_settings_edit_dialog_title" msgid="316493656442362284">"កែ​ពាក្យ"</string>
-    <string name="user_dict_settings_context_menu_edit_title" msgid="4909198741914531509">"កែសម្រួល​"</string>
+    <string name="user_dict_settings_context_menu_edit_title" msgid="4909198741914531509">"កែ"</string>
     <string name="user_dict_settings_context_menu_delete_title" msgid="651550824433043545">"លុប"</string>
     <string name="user_dict_settings_empty_text" msgid="86562873609647919">"អ្នកមិនមានពាក្យក្នុងវចនានុក្រមអ្នកប្រើប្រាស់ទេ។ ដើម្បីបញ្ចូលពាក្យ សូមចុចប៊ូតុងបញ្ចូល (+)។"</string>
     <string name="user_dict_settings_all_languages" msgid="8563387437755363526">"សម្រាប់​ភាសា​ទាំងអស់"</string>
@@ -3730,7 +3741,7 @@
     <string name="zen_mode_automation_settings_title" msgid="3709324184191870926">"កាលវិភាគ"</string>
     <string name="zen_mode_delete_automatic_rules" msgid="5020468289267191765">"លុបកាលវិភាគ"</string>
     <string name="zen_mode_schedule_delete" msgid="5383420576833765114">"លុប"</string>
-    <string name="zen_mode_rule_name_edit" msgid="1053237022416700481">"កែសម្រួល"</string>
+    <string name="zen_mode_rule_name_edit" msgid="1053237022416700481">"កែ"</string>
     <string name="zen_mode_automation_settings_page_title" msgid="6217433860514433311">"កាលវិភាគ"</string>
     <string name="zen_mode_automatic_rule_settings_page_title" msgid="5264835276518295033">"កាលវិភាគ"</string>
     <string name="zen_mode_schedule_category_title" msgid="1381879916197350988">"កាលវិភាគ"</string>
@@ -4401,10 +4412,8 @@
       <item quantity="one">កម្មវិធី​ដែលមិនប្រើ​ចំនួន <xliff:g id="COUNT_0">%d</xliff:g></item>
     </plurals>
     <string name="unused_apps_category" msgid="8954930958175500851">"ការកំណត់កម្មវិធីដែលមិនប្រើ"</string>
-    <!-- no translation found for unused_apps_switch (7595419855882245772) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch_summary (2171098908014596802) -->
-    <skip />
+    <string name="unused_apps_switch" msgid="7595419855882245772">"ផ្អាក​សកម្មភាព​កម្មវិធី ប្រសិនបើមិនប្រើ"</string>
+    <string name="unused_apps_switch_summary" msgid="2171098908014596802">"ដកការអនុញ្ញាតចេញ លុបឯកសារបណ្ដោះអាសន្ន និងបញ្ឈប់ការជូនដំណឹង"</string>
     <string name="filter_all_apps" msgid="6645539744080251371">"កម្មវិធីទាំងអស់"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"កម្មវិធី​ដែល​បាន​ដំឡើង"</string>
     <string name="filter_instant_apps" msgid="2292108467020380068">"កម្មវិធី​ប្រើ​ភ្លាមៗ"</string>
@@ -5060,10 +5069,8 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"ឧបករណ៍​នេះ​ស្ថិត​ក្រោម​ការ​គ្រប់គ្រង​របស់ <xliff:g id="ORGANIZATION_NAME">%s</xliff:g> ។"</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"ស្វែងយល់បន្ថែម"</string>
-    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
-    <skip />
-    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
-    <skip />
+    <string name="blocked_by_restricted_settings_title" msgid="7334715011474037399">"ការកំណត់​ដែលបានរឹតបន្តឹង"</string>
+    <string name="toast_allows_restricted_settings_successfully" msgid="1219116121291466102">"បានអនុញ្ញាត​ការកំណត់​ដែលបានរឹតបន្តឹង​សម្រាប់ <xliff:g id="APP_NAME">%s</xliff:g>"</string>
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"ដើម្បីសុវត្ថិភាព​របស់អ្នក បច្ចុប្បន្នមិនអាចប្រើការកំណត់នេះបានទេ។"</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"ព័ត៌មានឧបករណ៍ដែលទទួលបានហិរញ្ញប្បទាន"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"ក្រុមហ៊ុនផ្ដល់សេវាឥណទានរបស់អ្នកអាចផ្លាស់ប្ដូរការកំណត់ និងដំឡើងកម្មវិធីនៅលើឧបករណ៍នេះបាន។\n\nប្រសិនបើអ្នកខកខានការបង់ប្រាក់ ឧបករណ៍របស់អ្នកនឹងត្រូវបានចាក់សោ។\n\nដើម្បីស្វែងយល់បន្ថែម សូមទាក់ទងទៅក្រុមហ៊ុនផ្ដល់សេវាឥណទានរបស់អ្នក។"</string>
@@ -5546,8 +5553,7 @@
     <string name="lockscreen_privacy_controls_summary" msgid="2769166101644452893">"បង្ហាញការគ្រប់គ្រងសម្រាប់ឧបករណ៍ខាងក្រៅពីអេក្រង់ចាក់សោ"</string>
     <string name="lockscreen_trivial_controls_setting_toggle" msgid="8211063535536295676">"គ្រប់គ្រងពី​ឧបករណ៍ជាប់សោ"</string>
     <string name="lockscreen_trivial_controls_summary" msgid="680581904143387225">"គ្រប់គ្រង​ឧបករណ៍ខាងក្រៅ​ដោយមិន​ដោះសោ​ទូរសព្ទ ឬថេប្លេត​របស់អ្នក ប្រសិនបើ​អនុញ្ញាតដោយ​កម្មវិធី​ផ្ទាំងគ្រប់គ្រងឧបករណ៍"</string>
-    <!-- no translation found for lockscreen_trivial_disabled_controls_summary (7593626010580689155) -->
-    <skip />
+    <string name="lockscreen_trivial_disabled_controls_summary" msgid="7593626010580689155">"ដើម្បីប្រើ សូមបើក \"បង្ហាញផ្ទាំងគ្រប់គ្រងឧបករណ៍\" ជាមុនសិន"</string>
     <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"បង្ហាញ​នាឡិកា​ពីរជួរ នៅពេល​ដែលមាន"</string>
     <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"នាឡិកា​ពីរជួរ"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
