--- a/res/values-lo/strings.xml
+++ b/res/values-lo/strings.xml
@@ -219,11 +219,15 @@
     <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"ພາສາແອັບ"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"ຕັ້ງພາສາສຳລັບແຕ່ລະແອັບ"</string>
     <string name="app_locale_picker_title" msgid="8423365003726200684">"ພາສາແອັບ"</string>
+    <string name="warnings_title" msgid="613849105118598110">"ອັບເດດແອັບ"</string>
+    <string name="warnings_summary" msgid="5600524378302608542">"ທ່ານຈະຕ້ອງອັບເດດແອັບສຳລັບພາສາທີ່ສາມາດໃຊ້ໄດ້ຫຼ້າສຸດກ່ອນ"</string>
+    <string name="warnings_button_update" msgid="8819670776624561500">"ອັບເດດຕອນນີ້"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"ພາສາທີ່ແນະນຳ"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"ພາສາທັງໝົດ"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"ພາສາລະບົບ"</string>
     <string name="preference_of_system_locale_summary" msgid="7828965109093154187">"ຄ່າເລີ່ມຕົ້ນຂອງລະບົບ - <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g>"</string>
-    <string name="no_multiple_language_supported" msgid="1683023807955740826">"ແອັບນີ້ຖືກຕັ້ງເປັນ <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g> ຕາມແບບເລີ່ມຕົ້ນ ແລະ ບໍ່ຮອງຮັບຫຼາຍພາສາ."</string>
+    <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"ບໍ່ສາມາດເລືອກພາສາສຳລັບແອັບນີ້ຈາກການຕັ້ງຄ່າໄດ້."</string>
+    <string name="desc_disallow_locale_change_in_settings" msgid="8355972147053068698">"ທ່ານບໍ່ສາມາດເລືອກພາສາສຳລັບແອັບນີ້ຈາກການຕັ້ງຄ່າໄດ້."</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">ລຶບພາສາທີ່ເລືອກບໍ?</item>
       <item quantity="one">ລຶບພາສາທີ່ເລືອກບໍ?</item>
@@ -338,7 +342,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"ສະຖານະຄວາມປອດໄພ"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"ລັອກໜ້າຈໍ, ຊອກຫາອຸປະກອນຂອງຂ້ອຍ, ຄວາມປອດໄພແອັບ"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"ຄວາມປອດໄພ ແລະ ຄວາມເປັນສ່ວນຕົວ"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"ການອະນຸຍາດ, ລັອກໜ້າຈໍ, ຄວາມປອດໄພແອັບ"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"ເພີ່ມໜ້າແລ້ວ"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"ແຕະເພື່ອຕັ້ງຄ່າໜ້າ"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"ປົດລັອກດ້ວຍໜ້າ"</string>
@@ -454,6 +459,8 @@
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_4" msgid="4983770600405797515">"ທ່ານ ແລະ ລູກຂອງທ່ານສາມາດລຶບຮູບ ແລະ ຮູບແບບລາຍນິ້ວມືຂອງເຂົາເຈົ້າອອກ ຫຼື ປິດການໃຊ້ການປົດລັອກດ້ວຍລາຍນິ້ວມືຕອນໃດກໍໄດ້ໃນການຕັ້ງຄ່າ. ຮູບລາຍນິ້ວມື ແລະ ຮູບແບບແມ່ນຖືກຈັດເກັບໄວ້ຢູ່ໂທລະສັບຈົນກວ່າພວກມັນຈະຖືກລຶບອອກ."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_5" msgid="2018885671994058605">"ໂທລະສັບຂອງທ່ານສາມາດຖືກປົດລັອກໄດ້ເມື່ອທ່ານບໍ່ໄດ້ຕັ້ງໃຈ ເຊັ່ນ: ຫາກມີຄົນຖືມັນໄປໃສ່ນິ້ວມືຂອງທ່ານ."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_5" msgid="8356551505082794682">"ໂທລະສັບຂອງລູກທ່ານສາມາດຖືກປົດລັອກໄດ້ໃນເວລາທີ່ເຂົາເຈົ້າບໍ່ໄດ້ຕັ້ງໃຈ ເຊັ່ນ: ຫາກມີຄົນຖືໂທລະສັບໄປໃສ່ນິ້ວມືຂອງເຂົາເຈົ້າ."</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_6" msgid="5314031490467481499">"ເພື່ອໃຫ້ໄດ້ຜົນຮັບທີ່ດີທີ່ສຸດ, ໃຫ້ໃຊ້ຕົວປົກປ້ອງໜ້າຈໍທີ່ໄດ້ຮັບການຮັບຮອງ Made for Google. ດ້ວຍຕົວປົກປ້ອງໜ້າຈໍແບບອື່ນ, ລາຍນິ້ວມືຂອງທ່ານອາດໃຊ້ບໍ່ໄດ້."</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_6" msgid="3563942520716110478">"ເພື່ອໃຫ້ໄດ້ຜົນຮັບທີ່ດີທີ່ສຸດ, ໃຫ້ໃຊ້ຕົວປົກປ້ອງໜ້າຈໍທີ່ໄດ້ຮັບການຮັບຮອງ Made for Google. ດ້ວຍຕົວປົກປ້ອງໜ້າຈໍແບບອື່ນ, ລາຍນິ້ວມືຂອງລູກທ່ານອາດໃຊ້ບໍ່ໄດ້."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_message_learn_more" msgid="5856010507790137793"></string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_try_adjusting" msgid="3855444121278320304">"ປ່ຽນຕຳແໜ່ງຂອງນິ້ວມືຂອງທ່ານເລັກນ້ອຍໃນແຕ່ລະເທື່ອ"</string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_partially_detected" msgid="8330287007361798356">"ບັງໄອຄອນດ້ວຍກາງຂອງນິ້ວຂອງທ່ານ"</string>
@@ -507,7 +514,8 @@
     <string name="security_settings_fingerprint_enroll_repeat_message" msgid="5382958363770893577">"ຍົກນິ້ວຂອງທ່ານຂຶ້ນເພື່ອເພີ່ມສ່ວນຕ່າງໆຂອງລາຍນິ້ວມືທ່ານ."</string>
     <string name="security_settings_udfps_enroll_repeat_message" msgid="2213106975297867798">"ແຕະຄ້າງໄວ້ໃນແຕ່ລະເທື່ອທີ່ໄອຄອນລາຍນິ້ວມືເຄື່ອນ. ນີ້ຈະຊ່ວຍບັນທຶກລາຍນິ້ວມືຂອງທ່ານໄດ້ຫຼາຍຂຶ້ນ."</string>
     <string name="security_settings_udfps_enroll_fingertip_title" msgid="4123142574168831116">"ວາງປາຍນິ້ວມືຂອງທ່ານໃສ່ເຊັນເຊີ"</string>
-    <string name="security_settings_udfps_enroll_edge_title" msgid="6137605344819152477">"ສຸດທ້າຍ, ໃຫ້ໃຊ້ຂອບຂອງນິ້ວມືທ່ານ"</string>
+    <string name="security_settings_udfps_enroll_left_edge_title" msgid="1944076382202470458">"ວາງຂອບຊ້າຍຂອງນິ້ວມືທ່ານ"</string>
+    <string name="security_settings_udfps_enroll_right_edge_title" msgid="9036744264606447490">"ວາງຂອບຂວາຂອງນິ້ວມືທ່ານ"</string>
     <string name="security_settings_udfps_enroll_edge_message" msgid="4455253923746607702">"ວາງທາງຂ້າງຂອງລາຍນິ້ວມືທ່ານໃສ່ເຊັນເຊີແລ້ວກົດຄ້າງໄວ້, ຈາກນັ້ນສະຫຼັບໄປອີກຂ້າງ"</string>
     <string name="security_settings_udfps_enroll_repeat_a11y_message" msgid="2785464357615568197">"ນີ້ຈະຊ່ວຍບັນທຶກລາຍນິ້ວມືຂອງທ່ານໄດ້ຫຼາຍຂຶ້ນ"</string>
     <string name="security_settings_udfps_enroll_progress_a11y_message" msgid="6183535114682369699">"ກຳລັງລົງທະບຽນລາຍນິ້ວມື <xliff:g id="PERCENTAGE">%d</xliff:g> ເປີເຊັນ"</string>
@@ -579,10 +587,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" ຕົວເລືອກໜ້າຈໍລັອກຖືກປິດການນຳໃຊ້ໄວ້. ເພື່ອສຶກສາເພີ່ມເຕີມ, ໃຫ້ຕິດຕໍ່ຜູ້ເບິ່ງແຍງລະບົບອົງກອນຂອງທ່ານ. "<annotation id="admin_details">"ລາຍລະອຽດເພີ່ມເຕີມ"</annotation>\n\n"ທ່ານຍັງຄົງສາມາດໃຊ້ລາຍນິ້ວມືຂອງທ່ານເພື່ອອະນຸມັດການສັ່ງຊື້ແອັບ ແລະ ການເຂົ້າເຖິງແອັບໄດ້. "<annotation id="url">"ສຶກສາເພີ່ມເຕີມ"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"ຍົກນິ້ວມືອອກ, ຈາກນັ້ນ ສຳຜັດເຊັນເຊີອີກຄັ້ງ"</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"ບໍ່ສາມາດໃຊ້ເຊັນ​ເຊີລາຍນິ້ວ​ມືໄດ້. ກະລຸນາໄປຫາຜູ້ໃຫ້ບໍລິການສ້ອມແປງ"</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"ການຕັ້ງຄ່າຂັ້ນສູງ"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"ລັອກ​ໂປຣ​ໄຟລ໌​ບ່ອນ​ເຮັດ​ວຽກ, Smart Lock"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"Smart Lock ແລະ ອື່ນໆ"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"ການຕັ້ງຄ່າຂັ້ນສູງ"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"ທ່ານ​ສາ​ມາດ​ເພີ່ມ​ບໍ່ເກີນ <xliff:g id="COUNT">%d</xliff:g> ລາຍ​ນີ້ວ​ມື​"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"You’ve added the maximum number of fingerprints"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Can’t add more fingerprints"</string>
@@ -1422,7 +1434,7 @@
     <string name="style_suggestion_title" msgid="1213747484782364775">"ປັບແຕ່ງໂທລະສັບຂອງທ່ານ"</string>
     <string name="style_suggestion_summary" msgid="4271131877800968159">"ລອງໃຊ້ຮູບແບບ, ຮູບພື້ນຫຼັງ ແລະ ອື່ນໆທີ່ແຕກຕ່າງກັນ"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"ພາບພັກໜ້າຈໍ"</string>
-    <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"ໃຊ້ສະກຣີນເຊບເວີ"</string>
+    <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"ໃຊ້ພາບພັກໜ້າຈໍ"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"ໃນຂະນະທີ່ກຳລັງສາກ ຫຼື ວາງໄວ້ບ່ອນຕັ້ງສາກ"</string>
     <string name="screensaver_settings_summary_either_short" msgid="2126139984738506920">"ແບບໃດກໍໄດ້"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"ໃນຂະນະທີ່ກຳລັງສາກໄຟ"</string>
@@ -1905,8 +1917,7 @@
     <string name="module_license_title" msgid="8705484239826702828">"ໃບອະນຸຍາດອັບເດດລະບົບ Google Play"</string>
     <string name="terms_title" msgid="2071742973672326073">"ຂໍ້ກຳນົດ ແລະເງື່ອນໄຂ"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"ໃບ​ອະ​ນຸ​ຍາດ WebView ຂອງ​ລະ​ບົບ"</string>
-    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
-    <skip />
+    <string name="wallpaper_attributions" msgid="4323659759250650736">"ເຄຣດິດຮູບພື້ນຫຼັງ"</string>
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"ຜູ້ສະໜອງພາບຖ່າຍດາວທຽມ:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"ຕັ້ງຄ່າເອງ"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"ເກີດບັນຫາໃນການໂຫລດຄູ່​ມື."</string>
@@ -2057,8 +2068,7 @@
     <string name="enable_text" msgid="8570798764647110430">"ເປີດນຳໃຊ້"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"ລຶບພື້ນທີ່ຈັດເກັບຂໍ້ມູນ"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"ຖອນການຕິດຕັ້ງອັບເດດ"</string>
-    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
-    <skip />
+    <string name="app_restricted_settings_lockscreen_title" msgid="5993061278264872648">"ອະນຸຍາດການຕັ້ງຄ່າທີ່ຈຳກັດ"</string>
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"ການເຄື່ອນໄຫວຈຳນວນໜຶ່ງທີ່ທ່ານເລືອກຈະເປີດໃນແອັບນີ້ຕາມຄ່າເລີ່ມຕົ້ນ."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"ທ່ານໄດ້ອະນຸຍາດໃຫ້ແອັບຯນີ້ ສ້າງວິກເຈັດ ແລະເຂົ້າເຖິງຂໍ້ມູນຂອງພວກເຂົາໄດ້ແລ້ວ."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"ບໍ່ໄດ້ຕັ້ງຄ່າເລີ່ມຕົ້ນເທື່ອ."</string>
@@ -2093,9 +2103,10 @@
     <string name="internal_storage" msgid="999496851424448809">"ພື້ນທີ່ຈັດເກັບຂໍ້ມູນພາຍໃນ"</string>
     <string name="recompute_size" msgid="1098091228370999128">"ກຳລັງຄຳນວນຂະໜາດຄືນໃໝ່..."</string>
     <string name="clear_data_dlg_title" msgid="180446967743732410">"ລຶບຂໍ້ມູນແອັບບໍ່?"</string>
-    <string name="clear_data_dlg_text" msgid="1107610960337399006">"ຂໍ້ມູນຂອງແອັບນີ້ຈະຖືກລຶບອອກຖາວອນ. ນີ້ຮວມເຖິງໄຟລ໌, ການຕັ້ງຄ່າ, ຖານຂໍ້ມູນ ແລະ ຂໍ້ມູນແອັບອື່ນໆນຳ"</string>
+    <string name="clear_data_dlg_text" msgid="3440011276559762619">"ຂໍ້ມູນຂອງແອັບນີ້, ຮວມທັງໄຟລ໌ ແລະ ການຕັ້ງຄ່າ, ຈະຖືກລຶບອອກຈາກອຸປະກອນນີ້ຢ່າງຖາວອນ"</string>
     <string name="dlg_ok" msgid="1421350367857960997">"ຕົກລົງ"</string>
     <string name="dlg_cancel" msgid="5164705061530774899">"ຍົກເລີກ"</string>
+    <string name="dlg_delete" msgid="1790919205039397659">"ລຶບ"</string>
     <string name="app_not_found_dlg_title" msgid="7122106240981109930"></string>
     <string name="app_not_found_dlg_text" msgid="8634675268730513704">"ບໍ່ພົບແອັບຯດັ່ງກ່າວໃນລາຍຊື່ຂອງແອັບຯທີ່ມີການຕິດຕັ້ງແລ້ວ."</string>
     <string name="clear_failed_dlg_text" msgid="6866741916836125732">"ບໍ່ສາມາດລຶບພື້ນທີ່ຈັດເກັບຂໍ້ມູນໃຫ້ແອັບໄດ້."</string>
@@ -4139,8 +4150,8 @@
     <string name="zen_schedule_rule_enabled_toast" msgid="6534402316741678208">"ຕັ້ງ​ກົດ​ກຳ​ນົດ​ໃຫ້​ເປີດ​ຫ້າມ​ລົບ​ກວນ​ໂດຍ​ອັດ​ຕະ​ໂນ​ມັດ​ໃນ​ລະ​ຫວ່າງເວ​ລາ​ສະ​ເພາະ"</string>
     <string name="zen_event_rule_type_name" msgid="1921166617081971754">"ເຫດການ"</string>
     <string name="zen_event_rule_enabled_toast" msgid="4943723266121388395">"ຕັ້ງ​ກົດ​ກຳ​ນົດ​ໃຫ້​ເປີດ​ຫ້າມ​ລົບ​ກວນ​ໂດຍ​ອັດ​ຕະ​ໂນ​ມັດ​ໃນ​ລະ​ຫວ່າງ​ເຫດ​ການ​ສະ​ເພາະ"</string>
-    <string name="zen_mode_event_rule_calendar" msgid="6279460374929508907">"ໃນ​ລະ​ຫວ່າງ​ເຫດ​ການ​ສຳ​ລັບ"</string>
-    <string name="zen_mode_event_rule_summary_calendar_template" msgid="3065013489987409864">"ໃນ​ລະ​ຫວ່າງ​ເຫດ​ການ​ສຳ​ລັບ <xliff:g id="CALENDAR">%1$s</xliff:g>"</string>
+    <string name="zen_mode_event_rule_calendar" msgid="6279460374929508907">"ໃນ​ລະ​ຫວ່າງການນັດໝາຍ​ສຳ​ລັບ"</string>
+    <string name="zen_mode_event_rule_summary_calendar_template" msgid="3065013489987409864">"ໃນ​ລະ​ຫວ່າງການນັດໝາຍ​​ສຳ​ລັບ <xliff:g id="CALENDAR">%1$s</xliff:g>"</string>
     <string name="zen_mode_event_rule_summary_any_calendar" msgid="8395450413356855311">"ປະ​ຕິ​ທິນ​ໃດ​ກໍໄດ້"</string>
     <string name="zen_mode_event_rule_summary_reply_template" msgid="7786137431469077008">"ເມື່ອຄຳຕອບແມ່ນ <xliff:g id="REPLY">%1$s</xliff:g>"</string>
     <string name="zen_mode_event_rule_calendar_any" msgid="5152139705998281205">"ປະ​ຕິ​ທິນ​ໃດ​ກໍໄດ້"</string>
@@ -4158,7 +4169,7 @@
     <string name="zen_mode_schedule_alarm_summary" msgid="9162760856136645133">"ການກຳນົດເວລາຈະປິດຕົວເອງເມື່ອສຽງໂມງປຸກດັງ"</string>
     <string name="zen_mode_custom_behavior_title" msgid="92525364576358085">"ລັກສະນະການເຮັດວຽກຂອງໂໝດຫ້າມລົບກວນ"</string>
     <string name="zen_mode_custom_behavior_summary_default" msgid="3259312823717839148">"ໃຊ້ການຕັ້ງຄ່າເລີ່ມ​ຕົ້ນ"</string>
-    <string name="zen_mode_custom_behavior_summary" msgid="5390522750884328843">"ສ້າງການຕັ້ງຄ່າແບບກຳນົດເອງສຳລັບກຳນົດການນີ້"</string>
+    <string name="zen_mode_custom_behavior_summary" msgid="5390522750884328843">"ສ້າງການຕັ້ງຄ່າແບບກຳນົດເອງສຳລັບກຳນົດເວລານີ້"</string>
     <string name="zen_mode_custom_behavior_category_title" msgid="7815612569425733764">"ສຳລັບ ‘<xliff:g id="SCHEDULE_NAME">%1$s</xliff:g>’"</string>
     <string name="summary_divider_text" msgid="8836285171484563986">", "</string>
     <string name="summary_range_symbol_combination" msgid="8447490077794415525">"<xliff:g id="START">%1$s</xliff:g> - <xliff:g id="END">%2$s</xliff:g>"</string>
@@ -4401,10 +4412,8 @@
       <item quantity="one"><xliff:g id="COUNT_0">%d</xliff:g> ແອັບທີ່ບໍ່ໄດ້ໃຊ້</item>
     </plurals>
     <string name="unused_apps_category" msgid="8954930958175500851">"ການຕັ້ງຄ່າແອັບທີ່ບໍ່ໄດ້ໃຊ້"</string>
-    <!-- no translation found for unused_apps_switch (7595419855882245772) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch_summary (2171098908014596802) -->
-    <skip />
+    <string name="unused_apps_switch" msgid="7595419855882245772">"ຢຸດການເຄື່ອນໄຫວແອັບຊົ່ວຄາວຫາກບໍ່ໄດ້ໃຊ້"</string>
+    <string name="unused_apps_switch_summary" msgid="2171098908014596802">"ລຶບການອະນຸຍາດອອກ, ລຶບໄຟລ໌ຊົ່ວຄາວ ແລະ ຢຸດການແຈ້ງເຕືອນ"</string>
     <string name="filter_all_apps" msgid="6645539744080251371">"ແອັບທັງໝົດ"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"ແອັບທີ່ຕິດຕັ້ງແລ້ວ"</string>
     <string name="filter_instant_apps" msgid="2292108467020380068">"ອິນສະແຕນແອັບ"</string>
@@ -5060,10 +5069,8 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"ອຸປະກອນນີ້ຖືກຈັດການໂດຍ <xliff:g id="ORGANIZATION_NAME">%s</xliff:g>"</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"ສຶກສາເພີ່ມເຕີມ"</string>
-    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
-    <skip />
-    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
-    <skip />
+    <string name="blocked_by_restricted_settings_title" msgid="7334715011474037399">"ການຕັ້ງຄ່າທີ່ຈຳກັດ"</string>
+    <string name="toast_allows_restricted_settings_successfully" msgid="1219116121291466102">"ອະນຸຍາດການຕັ້ງຄ່າທີ່ຈຳກັດສຳລັບ <xliff:g id="APP_NAME">%s</xliff:g> ແລ້ວ"</string>
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"ເພື່ອຄວາມປອດໄພຂອງທ່ານ, ຕອນນີ້ຈຶ່ງບໍ່ສາມາດໃຊ້ການຕັ້ງຄ່ານີ້ໄດ້."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"ຂໍ້ມູນອຸປະກອນທີ່ໄດ້ຮັບການສະໜັບສະໜຸນທາງການເງິນ"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"ຜູ້ໃຫ້ບໍລິການເຄຣດິດຂອງທ່ານສາມາດປ່ຽນການຕັ້ງຄ່າ ແລະ ຕິດຕັ້ງຊອບແວຢູ່ອຸປະກອນນີ້ໄດ້.\n\nຫາກທ່ານພາດການຈ່າຍເງິນໃດໜຶ່ງ, ອຸປະກອນຂອງທ່ານຈະຖືກລັອກໄວ້.\n\nເພື່ອສຶກສາເພີ່ມເຕີມ, ໃຫ້ຕິດຕໍ່ຜູ້ໃຫ້ບໍລິການເຄຣດິດຂອງທ່ານ."</string>
@@ -5546,8 +5553,7 @@
     <string name="lockscreen_privacy_controls_summary" msgid="2769166101644452893">"ສະແດງການຄວບຄຸມສຳລັບອຸປະກອນພາຍນອກຈາກໜ້າຈໍລັອກ"</string>
     <string name="lockscreen_trivial_controls_setting_toggle" msgid="8211063535536295676">"ຄວບຄຸມຈາກອຸປະກອນທີ່ລັອກໄວ້"</string>
     <string name="lockscreen_trivial_controls_summary" msgid="680581904143387225">"ຄວບຄຸມອຸປະກອນພາຍນອກໂດຍບໍ່ຕ້ອງປົດລັອກໂທລະສັບ ຫຼື ແທັບເລັດຂອງທ່ານຫາກໄດ້ຮັບອະນຸຍາດໂດຍແອັບການຄວບຄຸມອຸປະກອນ"</string>
-    <!-- no translation found for lockscreen_trivial_disabled_controls_summary (7593626010580689155) -->
-    <skip />
+    <string name="lockscreen_trivial_disabled_controls_summary" msgid="7593626010580689155">"ເພື່ອໃຊ້, ທຳອິດໃຫ້ເປີດໃຊ້ \"ສະແດງການຄວບຄຸມອຸປະກອນ\" ກ່ອນ"</string>
     <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"ສະແດງໂມງສອງແຖວເມື່ອສາມາດໃຊ້ໄດ້"</string>
     <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"ໂມງສອງແຖວ"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
@@ -5749,7 +5755,7 @@
   </string-array>
     <string name="tare_dialog_confirm_button_title" msgid="9179397559760203348">"ຢືນຢັນ"</string>
     <string name="dream_preview_button_title" msgid="6637456541851795952">"ຕົວຢ່າງ"</string>
-    <string name="dream_picker_category" msgid="7726447836872744867">"ເລືອກສະກຣີນເຊບເວີ"</string>
+    <string name="dream_picker_category" msgid="7726447836872744867">"ເລືອກພາບພັກໜ້າຈໍ"</string>
     <string name="dream_complications_toggle_title" msgid="4273232303027449163">"ສະແດງຂໍ້ມູນເພີ່ມເຕີມ"</string>
     <string name="dream_complications_toggle_summary" msgid="4742579722349951711">"ສະແດງເວລາ, ວັນທີ, ສະພາບອາກາດ, ຄຸນນະພາບອາກາດ ແລະ ລາຍລະອຽດ Cast ຢູ່ສະກຣີນເຊບເວີ"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"ການຕັ້ງຄ່າເພີ່ມເຕີມ"</string>
