--- a/res/values-ml/strings.xml
+++ b/res/values-ml/strings.xml
@@ -219,11 +219,15 @@
     <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"ആപ്പ് ഭാഷകൾ"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"ഓരോ ആപ്പിനുമുള്ള ഭാഷ സജ്ജീകരിക്കുക"</string>
     <string name="app_locale_picker_title" msgid="8423365003726200684">"ആപ്പ് ഭാഷ"</string>
+    <string name="warnings_title" msgid="613849105118598110">"ആപ്പ് അപ്‌ഡേറ്റ് ചെയ്യുക"</string>
+    <string name="warnings_summary" msgid="5600524378302608542">"ലഭ്യമായ ഏറ്റവും പുതിയ ഭാഷകൾക്ക് ആപ്പ് അപ്ഡേറ്റ് ചെയ്യേണ്ടതുണ്ട്"</string>
+    <string name="warnings_button_update" msgid="8819670776624561500">"അപ്ഡേറ്റ് ചെയ്യൂ"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"നിർദ്ദേശിച്ച ഭാഷകൾ"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"എല്ലാ ഭാഷകളും"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"സിസ്റ്റത്തിന്റെ ഭാഷ"</string>
     <string name="preference_of_system_locale_summary" msgid="7828965109093154187">"സിസ്‌റ്റം ഡിഫോൾട്ട് - <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g>"</string>
-    <string name="no_multiple_language_supported" msgid="1683023807955740826">"ആപ്പ് <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g> എന്നതിലേക്ക് ഡിഫോൾട്ടായി സജ്ജീകരിച്ചു, ഒന്നിലധികം ഭാഷകളെ അത് പിന്തുണയ്‌ക്കില്ല."</string>
+    <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"ക്രമീകരണത്തിൽ നിന്ന് ഈ ആപ്പിനുള്ള ഭാഷ തിരഞ്ഞെടുക്കാനുള്ള ഓപ്‌ഷൻ ലഭ്യമല്ല."</string>
+    <string name="desc_disallow_locale_change_in_settings" msgid="8355972147053068698">"ക്രമീകരണത്തിൽ നിന്ന് ഈ ആപ്പിനുള്ള ഒരു ഭാഷ നിങ്ങൾക്ക് തിരഞ്ഞെടുക്കാനാകില്ല."</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">തിരഞ്ഞെടുത്ത ഭാഷകൾ നീക്കംചെയ്യണോ?</item>
       <item quantity="one">തിരഞ്ഞെടുത്ത ഭാഷ നീക്കംചെയ്യണോ?</item>
@@ -338,7 +342,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"സുരക്ഷാ നില"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"സ്‌ക്രീൻ ലോക്ക്, Find My Device, ആപ്പ് സുരക്ഷ"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"സുരക്ഷയും സ്വകാര്യതയും"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"അനുമതികൾ, സ്‌ക്രീൻ ലോക്ക്, ആപ്പിന്റെ സുരക്ഷ"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"മുഖം ചേർത്തു"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"മുഖം സജ്ജീകരിക്കാൻ ടാപ്പ് ചെയ്യുക"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"ഫെയ്‌സ് അൺലോക്ക്"</string>
@@ -454,6 +459,8 @@
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_4" msgid="4983770600405797515">"നിങ്ങൾക്കും കുട്ടിക്കും ക്രമീകരണത്തിൽ ഏതുസമയത്തും ഫിംഗർപ്രിന്റ് ചിത്രങ്ങളും മോഡലും ഇല്ലാതാക്കാനോ ഫിംഗർപ്രിന്റ് അൺലോക്ക് ഓഫാക്കാനോ കഴിയും. ഫിംഗർപ്രിന്റ് ചിത്രങ്ങളും മോഡലുകളും ഇല്ലാതാക്കുന്നത് വരെ അവ ഫോണിൽ സംഭരിക്കുന്നു."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_5" msgid="2018885671994058605">"ആരെങ്കിലും ഫോൺ നിങ്ങളുടെ വിരലിൽ തട്ടിക്കുന്നത് പോലെ, നിങ്ങൾ ഉദ്ദേശിക്കാത്ത സന്ദർഭങ്ങളിലും ഫോൺ അൺലോക്ക് ചെയ്യാനാകും."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_5" msgid="8356551505082794682">"ആരെങ്കിലും ഫോൺ നിങ്ങളുടെ കുട്ടിയുടെ വിരലിന് നേരെ പിടിച്ചാൽ, അവർ ഉദ്ദേശിക്കാത്ത സന്ദർഭങ്ങളിലും ഫോൺ അൺലോക്ക് ചെയ്യാനാകും."</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_6" msgid="5314031490467481499">"മികച്ച ഫലങ്ങൾക്കായി, Google-നായി നിർമ്മിച്ചതെന്ന് സാക്ഷ്യപ്പെടുത്തിയ സ്‌ക്രീൻ പ്രൊട്ടക്‌ടർ ഉപയോഗിക്കുക. മറ്റ് സ്‌ക്രീൻ പ്രൊട്ടക്‌ടറുകളിൽ നിങ്ങളുടെ വിരലടയാളം പ്രവർത്തിക്കണമെന്നില്ല."</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_6" msgid="3563942520716110478">"മികച്ച ഫലങ്ങൾക്കായി, Google-നായി നിർമ്മിച്ചതെന്ന് സാക്ഷ്യപ്പെടുത്തിയ സ്‌ക്രീൻ പ്രൊട്ടക്‌ടർ ഉപയോഗിക്കുക. മറ്റ് സ്‌ക്രീൻ പ്രൊട്ടക്‌ടറുകളിൽ നിങ്ങളുടെ കുട്ടിയുടെ വിരലടയാളം പ്രവർത്തിക്കണമെന്നില്ല."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_message_learn_more" msgid="5856010507790137793"></string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_try_adjusting" msgid="3855444121278320304">"ഓരോ തവണയും നിങ്ങളുടെ വിരലിന്റെ സ്ഥാനം ചെറുതായി മാറ്റുക"</string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_partially_detected" msgid="8330287007361798356">"നിങ്ങളുടെ ഫിംഗർപ്രിന്റിന്റെ മധ്യഭാഗം ഉപയോഗിച്ച് ഐക്കൺ മറയ്ക്കുക"</string>
@@ -507,7 +514,8 @@
     <string name="security_settings_fingerprint_enroll_repeat_message" msgid="5382958363770893577">"നിങ്ങളുടെ ഫിംഗർപ്രിന്റിന്റെ വ്യത്യസ്ത ഭാഗങ്ങൾ ചേർക്കുന്നതിന് നിങ്ങളുടെ വിരൽ ഉയർത്തിക്കൊണ്ടിരിക്കുക"</string>
     <string name="security_settings_udfps_enroll_repeat_message" msgid="2213106975297867798">"ഓരോ തവണ ഫിംഗർപ്രിന്റ് ഐക്കൺ നീങ്ങുമ്പോഴും സ്‌പർശിച്ചുപിടിക്കുക. ഇത് നിങ്ങളുടെ ഫിംഗർപ്രിന്റ് കൂടുതൽ സമഗ്രമായി ക്യാപ്‌ചർ ചെയ്യാൻ സഹായിക്കും."</string>
     <string name="security_settings_udfps_enroll_fingertip_title" msgid="4123142574168831116">"നിങ്ങളുടെ വിരലിന്റെ അഗ്രം സെൻസറിൽ വയ്ക്കുക"</string>
-    <string name="security_settings_udfps_enroll_edge_title" msgid="6137605344819152477">"അവസാനമായി, നിങ്ങളുടെ വിരലിന്റെ വശങ്ങൾ ഉപയോഗിക്കുക"</string>
+    <string name="security_settings_udfps_enroll_left_edge_title" msgid="1944076382202470458">"നിങ്ങളുടെ വിരലിന്റെ ഇടത്തേയറ്റം വയ്‌ക്കുക"</string>
+    <string name="security_settings_udfps_enroll_right_edge_title" msgid="9036744264606447490">"നിങ്ങളുടെ വിരലിന്റെ വലത്തേയറ്റം വയ്‌ക്കുക"</string>
     <string name="security_settings_udfps_enroll_edge_message" msgid="4455253923746607702">"നിങ്ങളുടെ ഫിംഗർപ്രിന്റിന്റെ വശം സെൻസറിൽ വച്ച് അമർത്തിപ്പിടിക്കുക, തുടർന്ന് മറ്റേ വശം നൽകുക"</string>
     <string name="security_settings_udfps_enroll_repeat_a11y_message" msgid="2785464357615568197">"ഇത് നിങ്ങളുടെ ഫിംഗർപ്രിന്റ് കൂടുതൽ സമഗ്രമായി ക്യാപ്‌ചർ ചെയ്യാൻ സഹായിക്കും"</string>
     <string name="security_settings_udfps_enroll_progress_a11y_message" msgid="6183535114682369699">"ഫിംഗർപ്രിന്റ് എൻറോൾ ചെയ്യൽ <xliff:g id="PERCENTAGE">%d</xliff:g> ശതമാനം ആയി"</string>
@@ -579,10 +587,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" സ്‌ക്രീൻ ലോക്ക് ഓപ്ഷൻ പ്രവർത്തനരഹിതമാക്കി. കൂടുതലറിയാൻ, നിങ്ങളുടെ സ്ഥാപനത്തിന്റെ അഡ്‌മിനെ ബന്ധപ്പെടുക. "<annotation id="admin_details">"കൂടുതൽ വിശദാംശങ്ങൾ"</annotation>\n\n"നിങ്ങൾക്ക് ഇപ്പോഴും ഫിംഗർപ്രിന്റ് ഉപയോഗിച്ച് വാങ്ങലുകളും ആപ്പ് ആക്‌സസ്സും അംഗീകരിക്കാൻ കഴിയും. "<annotation id="url">"കൂടുതലറിയുക"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"വിരൽ ഉയർത്തുക, തുടർന്ന് സെൻസർ വീണ്ടും തൊടുക"</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"വിരലടയാള സെൻസർ ഉപയോഗിക്കാനാകുന്നില്ല. റിപ്പയർ കേന്ദ്രം സന്ദർശിക്കുക"</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"വിപുലമായ ക്രമീകരണം"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"ഔദ്യോഗിക പ്രൊഫൈൽ ലോക്ക്, Smart Lock"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"Smart Lock-ഉം മറ്റും"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"വിപുലമായ ക്രമീകരണം"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"നിങ്ങൾക്ക് <xliff:g id="COUNT">%d</xliff:g> വരെ ഫിംഗർപ്രിൻറുകൾ ചേർക്കാനാകും"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"നിങ്ങൾ പരമാവധി എണ്ണം ഫിംഗർപ്രിന്റുകൾ ചേർത്തിട്ടുണ്ട്"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"കൂടുതൽ ഫിംഗർപ്രിന്റുകൾ ചേർക്കാൻ കഴിയില്ല"</string>
@@ -821,7 +833,7 @@
     <string name="bluetooth_error_title" msgid="2284738188253690278"></string>
     <string name="bluetooth_connecting_error_message" msgid="3941893154784152112">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> എന്നതിലേക്ക് കണക്റ്റുചെയ്യാനായില്ല."</string>
     <string name="bluetooth_preference_scan_title" msgid="3460316252463771851">"ഉപകരണങ്ങൾക്കായി സ്‌കാൻ ചെയ്യുക"</string>
-    <string name="bluetooth_search_for_devices" msgid="6516902340975407648">"പുതുക്കുക"</string>
+    <string name="bluetooth_search_for_devices" msgid="6516902340975407648">"റീഫ്രഷ് ചെയ്യുക"</string>
     <string name="bluetooth_searching_for_devices" msgid="6541984133657573124">"തിരയുന്നു..."</string>
     <string name="bluetooth_preference_device_settings" msgid="1688662188157019998">"ഉപകരണ ക്രമീകരണങ്ങൾ"</string>
     <string name="bluetooth_preference_paired_dialog_title" msgid="1090131276572055841">"ജോടിയാക്കിയ ഉപകരണം"</string>
@@ -2091,9 +2103,10 @@
     <string name="internal_storage" msgid="999496851424448809">"ആന്തരിക സ്റ്റോറേജ്"</string>
     <string name="recompute_size" msgid="1098091228370999128">"വലുപ്പം വീണ്ടും കണക്കാക്കുന്നു..."</string>
     <string name="clear_data_dlg_title" msgid="180446967743732410">"ആപ്പ് ഡാറ്റ ഇല്ലാതാക്കണോ?"</string>
-    <string name="clear_data_dlg_text" msgid="1107610960337399006">"ഈ ആപ്പിന്റെ ഡാറ്റ ശാശ്വതമായി ഇല്ലാതാക്കും. ഇതിൽ ഫയലുകളും ക്രമീകരണവും ഡാറ്റാബേസുകളും മറ്റ് ആപ്പ് ഡാറ്റയും ഉൾപ്പെടുന്നു."</string>
+    <string name="clear_data_dlg_text" msgid="3440011276559762619">"ഈ ആപ്പിന്റെ ഫയലുകളും ക്രമീകരണവും ഉൾപ്പെടെയുള്ള ഡാറ്റ ഈ ഉപകരണത്തിൽ നിന്ന് ശാശ്വതമായി ഇല്ലാതാക്കപ്പെടും"</string>
     <string name="dlg_ok" msgid="1421350367857960997">"ശരി"</string>
     <string name="dlg_cancel" msgid="5164705061530774899">"റദ്ദാക്കുക"</string>
+    <string name="dlg_delete" msgid="1790919205039397659">"ഇല്ലാതാക്കുക"</string>
     <string name="app_not_found_dlg_title" msgid="7122106240981109930"></string>
     <string name="app_not_found_dlg_text" msgid="8634675268730513704">"ഇൻസ്റ്റാളുചെയ്‌ത അപ്ലിക്കേഷനുകളുടെ ലിസ്റ്റിൽ അപ്ലിക്കേഷൻ കണ്ടെത്തിയില്ല."</string>
     <string name="clear_failed_dlg_text" msgid="6866741916836125732">"ആപ്പുകൾക്കായി സ്‌റ്റോറേജ് മായ്‌ക്കാനായില്ല."</string>
@@ -2287,7 +2300,7 @@
     <string name="feature_flags_dashboard_title" msgid="348990373716658289">"ഫീച്ചർ ഫ്ലാഗുകൾ"</string>
     <string name="talkback_title" msgid="8756080454514251327">"TalkBack"</string>
     <string name="talkback_summary" msgid="5820927220378864281">"പ്രധാനമായും അന്ധർക്കും കാഴ്‍ചശക്തി കുറഞ്ഞവർക്കുമുള്ളതാണ് സ്ക്രീൻ റീഡർ"</string>
-    <string name="select_to_speak_summary" msgid="1995285446766920925">"നിങ്ങളുടെ സ്ക്രീനിലെ ഇനങ്ങൾ ഉറക്കെ വായിക്കുന്നത് കേൾക്കാൻ അവയിൽ ടാപ്പ് ചെയ്യുക"</string>
+    <string name="select_to_speak_summary" msgid="1995285446766920925">"നിങ്ങളുടെ സ്ക്രീനിലെ ഇനങ്ങൾ ഉറക്കെ വായിച്ചുകേൾക്കാൻ അവയിൽ ടാപ്പ് ചെയ്യുക"</string>
     <string name="accessibility_captioning_title" msgid="4561871958958925225">"അടിക്കുറിപ്പ് മുൻഗണനകൾ"</string>
     <string name="accessibility_captioning_about_title" msgid="3542171637334191563">"അടിക്കുറിപ്പ് മുൻഗണനകളെ കുറിച്ച്"</string>
     <string name="accessibility_captioning_footer_learn_more_content_description" msgid="5730040700677017706">"അടിക്കുറിപ്പ് മുൻഗണനകളെ കുറിച്ച് കൂടുതലറിയുക"</string>
@@ -2325,7 +2338,7 @@
     <string name="accessibility_text_reading_preview_mail_subject" msgid="4597374768612733616">"വിഷയം: ഹോട്ട് എയർ ബലൂൺ ഡിസൈനുകൾ"</string>
     <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"അയച്ചത്: രാമൻ"</string>
     <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"ഗുഡ് മോണിംഗ്!\n\nഡിസൈനുകളുടെ രൂപകൽപ്പന എന്തായി എന്ന് പരിശോധിക്കാൻ ഞാൻ ആഗ്രഹിക്കുന്നു. ഞങ്ങൾ പുതിയ ബലൂണുകൾ നിർമ്മിക്കാൻ തുടങ്ങുന്നതിന് മുമ്പ് അവ തയ്യാറാകുമോ?"</string>
-    <string name="accessibility_text_reading_reset_button_title" msgid="5960753279788187669">"ക്രമീകരണം റീസെറ്റുചെയ്യുക"</string>
+    <string name="accessibility_text_reading_reset_button_title" msgid="5960753279788187669">"ക്രമീകരണം റീസെറ്റ് ചെയ്യൂ"</string>
     <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"ഡിസ്പ്ലേ വലുപ്പവും ടെക്സ്റ്റും റീസെറ്റ് ചെയ്യണോ?"</string>
     <string name="accessibility_text_reading_confirm_dialog_message" msgid="517090197003540264">"നിങ്ങളുടെ ഡിസ്പ്ലേ വലുപ്പവും ടെക്സ്റ്റ് മുൻഗണനകളും ഫോണിന്റെ ഒറിജിനൽ ക്രമീകരണത്തിലേക്ക് റീസെറ്റ് ചെയ്യും"</string>
     <string name="accessibility_text_reading_confirm_dialog_reset_button" msgid="8215800137850243736">"റീസെറ്റ് ചെയ്യുക"</string>
@@ -2403,7 +2416,7 @@
     <string name="accessibility_toggle_screen_magnification_auto_update_preference_summary" msgid="9034532513972547720">"ആപ്പ് സംക്രമണങ്ങളിൽ സ്‌ക്രീൻ മാഗ്‌നിഫിക്കേഷൻ അപ്‌ഡേറ്റ് ചെയ്യുക"</string>
     <string name="accessibility_power_button_ends_call_prerefence_title" msgid="8187306131979612144">"പവർബട്ടൺ കോൾ നിർത്തുന്നു"</string>
     <string name="accessibility_toggle_large_pointer_icon_title" msgid="5508351959249876801">"വലിയ മൗസ് പോയിന്റർ"</string>
-    <string name="accessibility_toggle_large_pointer_icon_summary" msgid="1480527946039237705">"മൗസ് പോയിന്റർ കൂടുതൽ ശ്രദ്ധേയമാക്കുക"</string>
+    <string name="accessibility_toggle_large_pointer_icon_summary" msgid="1480527946039237705">"മൗസ് പോയിന്റർ വ്യക്തമായി കാണുന്നതാക്കുക"</string>
     <string name="accessibility_disable_animations" msgid="2993529829457179058">"ആനിമേഷനുകൾ നീക്കം ചെയ്യുക"</string>
     <string name="accessibility_disable_animations_summary" msgid="5828228669556554565">"സ്‌ക്രീനിലെ ചലനം കുറയ്‌ക്കുക"</string>
     <string name="accessibility_toggle_primary_mono_title" msgid="7587152099472946571">"മോണോ ഓഡിയോ"</string>
@@ -2916,7 +2929,7 @@
     <string name="menu_stats_unplugged" msgid="7125297366200634285">"അൺപ്ലഗ്ഗുചെയ്‌തതിന് ശേഷമുള്ള <xliff:g id="UNPLUGGED">%1$s</xliff:g>"</string>
     <string name="menu_stats_last_unplugged" msgid="230678127178268655">"<xliff:g id="UNPLUGGED">%1$s</xliff:g> എന്നതിനായി അവസാനം പ്ലഗുചെയ്‌തത് മാറ്റിയപ്പോൾ"</string>
     <string name="menu_stats_total" msgid="2713445396954503670">"ആകെ ഉപയോഗങ്ങൾ"</string>
-    <string name="menu_stats_refresh" msgid="6727628139586938835">"പുതുക്കുക"</string>
+    <string name="menu_stats_refresh" msgid="6727628139586938835">"റീഫ്രഷ് ചെയ്യുക"</string>
     <string name="process_mediaserver_label" msgid="6135260215912215092">"മീഡിയ സെർവർ"</string>
     <string name="process_dex2oat_label" msgid="1190208677726583153">"ആപ്പ് ഓപ്റ്റിമൈസേഷന്‍"</string>
     <string name="battery_saver" msgid="7737147344510595864">"ബാറ്ററി ലാഭിക്കൽ"</string>
@@ -4399,10 +4412,8 @@
       <item quantity="one">ഉപയോഗിക്കാത്ത <xliff:g id="COUNT_0">%d</xliff:g> ആപ്പ്</item>
     </plurals>
     <string name="unused_apps_category" msgid="8954930958175500851">"ഉപയോഗിക്കാത്ത ആപ്പ് ക്രമീകരണം"</string>
-    <!-- no translation found for unused_apps_switch (7595419855882245772) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch_summary (2171098908014596802) -->
-    <skip />
+    <string name="unused_apps_switch" msgid="7595419855882245772">"ഉപയോഗിച്ചിട്ടില്ലെങ്കിൽ ആപ്പ് ആക്റ്റിവിറ്റി പോസ് ചെയ്യുക"</string>
+    <string name="unused_apps_switch_summary" msgid="2171098908014596802">"അനുമതികൾ നീക്കം ചെയ്യുക, താൽക്കാലിക ഫയലുകൾ ഇല്ലാതാക്കുക, അറിയിപ്പുകൾ നിർത്തുക"</string>
     <string name="filter_all_apps" msgid="6645539744080251371">"എല്ലാ ആപ്പുകളും"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"ഇൻസ്‌റ്റാൾ ചെയ്‌ത ആപ്പുകൾ"</string>
     <string name="filter_instant_apps" msgid="2292108467020380068">"ഇൻസ്‌റ്റ‌ന്റ് ആപ്പ്"</string>
@@ -5542,8 +5553,7 @@
     <string name="lockscreen_privacy_controls_summary" msgid="2769166101644452893">"ബാഹ്യ ഉപകരണങ്ങളുടെ നിയന്ത്രണങ്ങൾ ലോക്ക് സ്‌ക്രീനിൽ കാണിക്കുക"</string>
     <string name="lockscreen_trivial_controls_setting_toggle" msgid="8211063535536295676">"ലോക്ക് ചെയ്‌ത ഉപകരണങ്ങളിൽ നിന്ന് നിയന്ത്രിക്കുക"</string>
     <string name="lockscreen_trivial_controls_summary" msgid="680581904143387225">"ഉപകരണ നിയന്ത്രണ ആപ്പ് അനുവദിക്കുന്നുണ്ടെങ്കിൽ നിങ്ങളുടെ ടാബ്‌ലെറ്റ് അല്ലെങ്കിൽ ഫോൺ അൺലോക്ക് ചെയ്യാതെ തന്നെ ബാഹ്യ ഉപകരണങ്ങൾ നിയന്ത്രിക്കുക"</string>
-    <!-- no translation found for lockscreen_trivial_disabled_controls_summary (7593626010580689155) -->
-    <skip />
+    <string name="lockscreen_trivial_disabled_controls_summary" msgid="7593626010580689155">"ഉപയോഗിക്കാൻ, ആദ്യം \"ഉപകരണ നിയന്ത്രണങ്ങൾ കാണിക്കുക\" ഓണാക്കുക"</string>
     <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"ലഭ്യമാകുമ്പോൾ ഡബിൾലൈൻ ക്ലോക്ക് കാണിക്കുക"</string>
     <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"ഡബിൾലൈൻ ക്ലോക്ക്"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
