--- a/res/values-or/strings.xml
+++ b/res/values-or/strings.xml
@@ -219,11 +219,15 @@
     <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"ଆପର ଭାଷାଗୁଡ଼ିକ"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"ପ୍ରତ୍ୟେକ ଆପ ପାଇଁ ଭାଷା ସେଟ କରନ୍ତୁ"</string>
     <string name="app_locale_picker_title" msgid="8423365003726200684">"ଆପର ଭାଷା"</string>
+    <string name="warnings_title" msgid="613849105118598110">"ଆପକୁ ଅପଡେଟ କରନ୍ତୁ"</string>
+    <string name="warnings_summary" msgid="5600524378302608542">"ଉପଲବ୍ଧ ନବୀନତମ ଭାଷାଗୁଡ଼ିକ ପାଇଁ ଆପଣ ଆପକୁ ଅପଡେଟ କରିବା ଆବଶ୍ୟକ"</string>
+    <string name="warnings_button_update" msgid="8819670776624561500">"ଏବେ ଅପଡେଟ କରନ୍ତୁ"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"ପ୍ରସ୍ତାବିତ ଭାଷାଗୁଡ଼ିକ"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"ସମସ୍ତ ଭାଷା"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"ସିଷ୍ଟମ ଭାଷା"</string>
     <string name="preference_of_system_locale_summary" msgid="7828965109093154187">"ସିଷ୍ଟମ ଡିଫଲ୍ଟ - <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g>"</string>
-    <string name="no_multiple_language_supported" msgid="1683023807955740826">"ଆପଟି ଡିଫଲ୍ଟ ଭାବରେ <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g> ଭାଷାରେ ସେଟ ହୋଇଛି ଏବଂ ଏହା ଏକାଧିକ ଭାଷାକୁ ସମର୍ଥନ କରେ ନାହିଁ।"</string>
+    <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"ସେଟିଂସରୁ ଏହି ଆପ ପାଇଁ ଭାଷା ଚୟନ ଉପଲବ୍ଧ ନାହିଁ।"</string>
+    <string name="desc_disallow_locale_change_in_settings" msgid="8355972147053068698">"ସେଟିଂସରୁ ଆପଣ ଏହି ଆପ ପାଇଁ କୌଣସି ଭାଷା ଚୟନ କରିପାରିବେ ନାହିଁ।"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">ଚୟନିତ ଭାଷାଗୁଡ଼ିକୁ କାଢ଼ିଦେବେ?</item>
       <item quantity="one">ଚୟନିତ ଭାଷାକୁ କାଢ଼ିଦେବେ?</item>
@@ -338,7 +342,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"ସୁରକ୍ଷା ସ୍ଥିତି"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"ସ୍କ୍ରିନ୍ ଲକ୍, Find My Device, ଆପ୍ ସୁରକ୍ଷା"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"ସୁରକ୍ଷା ଏବଂ ଗୋପନୀୟତା"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"ଅନୁମତି, ସ୍କ୍ରିନ ଲକ, ଆପ ସୁରକ୍ଷା"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"ଫେସ୍‌ ଯୋଡ଼ାଗଲା"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"ଫେସ୍ ସେଟ୍ ଅପ୍ କରିବାକୁ ଟାପ୍ କରନ୍ତୁ"</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"ଫେସ୍ ଅନଲକ୍"</string>
@@ -454,6 +459,8 @@
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_4" msgid="4983770600405797515">"ଟିପଚିହ୍ନର ଛବି ଓ ମଡେଲକୁ ଆପଣ ଏବଂ ଆପଣଙ୍କ ପିଲା ଡିଲିଟ କରିପାରିବେ କିମ୍ବା ଯେ କୌଣସି ସମୟରେ ସେଟିଂସରେ ଫିଙ୍ଗରପ୍ରିଣ୍ଟ ଅନଲକ ବନ୍ଦ କରିପାରିବେ। ଟିପଚିହ୍ନ ଛବି ଏବଂ ମଡେଲଗୁଡ଼ିକୁ ଡିଲିଟ ନକରିବା ପର୍ଯ୍ୟନ୍ତ ସେଗୁଡ଼ିକ ଫୋନରେ ଷ୍ଟୋର ହୋଇ ରହିଥାଏ।"</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_5" msgid="2018885671994058605">"ଯଦି କେହି ଜଣେ ବ୍ୟକ୍ତି ଆପଣଙ୍କ ଫୋନକୁ ଆପଣଙ୍କ ଆଙ୍ଗୁଠିରେ ସ୍ପର୍ଶ କରେ, ତେବେ ଆପଣଙ୍କ ଅଜାଣତରେ ମଧ୍ୟ, ଏହାକୁ ଅନଲକ୍ କରାଯାଇପାରିବ।"</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_5" msgid="8356551505082794682">"ଯଦି କେହି ଜଣେ ବ୍ୟକ୍ତି ଆପଣଙ୍କ ପିଲାର ଫୋନକୁ ତା’ର ଆଙ୍ଗୁଠିରେ ସ୍ପର୍ଶ କରେ, ତେବେ ତା’ର ଅଜାଣତରେ ମଧ୍ୟ, ଏହାକୁ ଅନଲକ୍ କରାଯାଇପାରିବ।"</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_6" msgid="5314031490467481499">"ସର୍ବୋତ୍ତମ ଫଳାଫଳ ପାଇଁ, Made for Google ସ୍ୱୀକୃତିପ୍ରାପ୍ତ ଏକ ସ୍କ୍ରିନ ପ୍ରୋଟେକ୍ଟର ବ୍ୟବହାର କରନ୍ତୁ। ଅନ୍ୟ ସ୍କ୍ରିନ ପ୍ରୋଟେକ୍ଟରଗୁଡ଼ିକ ସହିତ, ଆପଣଙ୍କ ଟିପଚିହ୍ନ କାମ କରିନପାରେ।"</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_6" msgid="3563942520716110478">"ସର୍ବୋତ୍ତମ ଫଳାଫଳ ପାଇଁ, Made for Google ସ୍ୱୀକୃତିପ୍ରାପ୍ତ ଏକ ସ୍କ୍ରିନ ପ୍ରୋଟେକ୍ଟର ବ୍ୟବହାର କରନ୍ତୁ। ଅନ୍ୟ ସ୍କ୍ରିନ ପ୍ରୋଟେକ୍ଟରଗୁଡ଼ିକ ସହିତ, ଆପଣଙ୍କ ପିଲାର ଟିପଚିହ୍ନ କାମ କରିନପାରେ।"</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_message_learn_more" msgid="5856010507790137793"></string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_try_adjusting" msgid="3855444121278320304">"ପ୍ରତି ଥର ଆପଣଙ୍କ ଆଙ୍ଗୁଠିର ସ୍ଥାନ ସାମାନ୍ୟ ପରିବର୍ତ୍ତନ କରନ୍ତୁ"</string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_partially_detected" msgid="8330287007361798356">"ଆପଣଙ୍କ ଟିପଚିହ୍ନର ମଝି ଅଂଶ ଦ୍ୱାରା ଆଇକନକୁ କଭର୍ କରନ୍ତୁ"</string>
@@ -507,7 +514,8 @@
     <string name="security_settings_fingerprint_enroll_repeat_message" msgid="5382958363770893577">"ନିଜ ଟିପଚିହ୍ନର ବିଭିନ୍ନ ଅଂଶ ଯୋଗ କରିବା ପାଇଁ ଆଙ୍ଗୁଠି ଉଠାଉଥାନ୍ତୁ"</string>
     <string name="security_settings_udfps_enroll_repeat_message" msgid="2213106975297867798">"ପ୍ରତ୍ୟେକ ଥର ଟିପଚିହ୍ନ ଆଇକନ୍ ମୁଭ୍ ହେଲେ ସ୍ପର୍ଶ କରି ଧରି ରଖନ୍ତୁ। ଏହା ଆପଣଙ୍କ ଚିପଚିହ୍ନର ଅଧିକାଂଶ କ୍ୟାପଚର୍ କରିବାରେ ସାହାଯ୍ୟ କରେ।"</string>
     <string name="security_settings_udfps_enroll_fingertip_title" msgid="4123142574168831116">"ଆପଣଙ୍କ ଆଙ୍ଗୁଠି ଟିପକୁ ସେନ୍ସର୍ ଉପରେ ରଖନ୍ତୁ"</string>
-    <string name="security_settings_udfps_enroll_edge_title" msgid="6137605344819152477">"ଶେଷରେ, ଆପଣଙ୍କ ଆଙ୍ଗୁଠିର ଧାର ବ୍ୟବହାର କରନ୍ତୁ"</string>
+    <string name="security_settings_udfps_enroll_left_edge_title" msgid="1944076382202470458">"ଆପଣଙ୍କ ଆଙ୍ଗୁଠିର ବାମ ଧାର ରଖନ୍ତୁ"</string>
+    <string name="security_settings_udfps_enroll_right_edge_title" msgid="9036744264606447490">"ଆପଣଙ୍କ ଆଙ୍ଗୁଠିର ଡାହାଣ ଧାର ରଖନ୍ତୁ"</string>
     <string name="security_settings_udfps_enroll_edge_message" msgid="4455253923746607702">"ଆପଣଙ୍କ ଟିପଚିହ୍ନର ଗୋଟିଏ ପାର୍ଶ୍ୱକୁ ସେନ୍ସର୍ ଉପରେ ଧରି ରଖନ୍ତୁ, ତା\'ପରେ ଅନ୍ୟ ପାର୍ଶ୍ୱକୁ ସ୍ୱିଚ୍ କରନ୍ତୁ"</string>
     <string name="security_settings_udfps_enroll_repeat_a11y_message" msgid="2785464357615568197">"ଏହା ଆପଣଙ୍କ ଚିପଚିହ୍ନର ଅଧିକାଂଶ କ୍ୟାପଚର୍ କରିବାରେ ସାହାଯ୍ୟ କରେ"</string>
     <string name="security_settings_udfps_enroll_progress_a11y_message" msgid="6183535114682369699">"ଟିପଚିହ୍ନ ପଞ୍ଜିକରଣ କରିବା ଶତକଡ଼ା <xliff:g id="PERCENTAGE">%d</xliff:g> ସମ୍ପୂର୍ଣ୍ଣ ହୋଇଛି"</string>
@@ -579,10 +587,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" ସ୍କ୍ରୀନ୍‌ ଲକ୍‌ ବିକଳ୍ପ ଅକ୍ଷମ ହୋଇଛି। ଅଧିକ ଜାଣିବା ପାଇଁ ନିଜ ସଂସ୍ଥାର ଆଡ୍‌ମିନ୍‌ଙ୍କୁ ସମ୍ପର୍କ କରନ୍ତୁ। "<annotation id="admin_details">"ଅଧିକ ବିବରଣୀ"</annotation>\n\n"କିଣାକିଣିକୁ ଆଧିକୃତ ଓ ଆପ୍‌ ଆକ୍ସେସ୍‌ ପାଇଁ ନିଜ ଆଙ୍ଗୁଠି ଚିହ୍ନକୁ ଆପଣ ତଥାପି ବ୍ୟବହାର କରିପାରିବେ। "<annotation id="url">"ଅଧିକ ଜାଣନ୍ତୁ"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"ଆଙ୍ଗୁଠିକୁ ଉଠାନ୍ତୁ ଓ ତା’ପରେ ସେନ୍ସରକୁ ପୁଣିଥରେ ଛୁଅଁନ୍ତୁ"</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"ଟିପଚିହ୍ନ ସେନ୍ସରକୁ ବ୍ୟବହାର କରାଯାଇପାରିବ ନାହିଁ। ଏକ ମରାମତି କେନ୍ଦ୍ରକୁ ଭିଜିଟ୍ କରନ୍ତୁ"</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"ଉନ୍ନତ ସେଟିଂସ"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"ୱାର୍କ ପ୍ରୋଫାଇଲ ଲକ, ସ୍ମାର୍ଟ ଲକ"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"ସ୍ମାର୍ଟ ଲକ ଏବଂ ଆହୁରି ଅନେକ କିଛି"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"ଉନ୍ନତ ସେଟିଂସ"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"ଆପଣ ସର୍ବାଧିକ <xliff:g id="COUNT">%d</xliff:g>ଟି ଆଙ୍ଗୁଠି ଚିହ୍ନ ଯୋଡ଼ିପାରିବେ"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"ଆପଣ ସର୍ବାଧିକ ସଂଖ୍ୟାର ଆଙ୍ଗୁଠି ଚିହ୍ନ ଯୋଡିଛନ୍ତି"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"ଆଉ ଅଧିକ ଟିପଚିହ୍ନ ଯୋଡିପାରିବ ନାହିଁ"</string>
@@ -1905,8 +1917,7 @@
     <string name="module_license_title" msgid="8705484239826702828">"Google Play ସିଷ୍ଟମ୍ ଅପ୍‌ଡେଟ୍ ଲାଇସେନ୍ସଗୁଡ଼ିକ"</string>
     <string name="terms_title" msgid="2071742973672326073">"ନିୟମ ଓ ସର୍ତ୍ତାବଳୀ"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"ସିଷ୍ଟମ୍‌ ୱେବ୍‌‌ଭ୍ୟୁ ଲାଇସେନ୍ସ"</string>
-    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
-    <skip />
+    <string name="wallpaper_attributions" msgid="4323659759250650736">"ୱାଲପେପର କ୍ରେଡିଟଗୁଡ଼ିକ"</string>
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"ସ୍ୟାଟେଲାଇଟ୍‌ ଇମେଜେରୀ ପ୍ରଦାତା:\n©2014 CNES / Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"ମାନୁଆଲ୍‌"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"ମାନୁଆଲ୍‌ ଲୋଡ୍ କରାଯିବାରେ ସମସ୍ୟା ଅଛି।"</string>
@@ -2057,8 +2068,7 @@
     <string name="enable_text" msgid="8570798764647110430">"ସକ୍ଷମ କରନ୍ତୁ"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"ଷ୍ଟୋରେଜ୍‌ ଖାଲି କରନ୍ତୁ"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"ଅପ୍‌ଡେଟ୍‌ଗୁଡ଼ିକୁ ଅନ୍ଇ‌ନଷ୍ଟଲ୍‌ କରନ୍ତୁ"</string>
-    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
-    <skip />
+    <string name="app_restricted_settings_lockscreen_title" msgid="5993061278264872648">"ପ୍ରତିବନ୍ଧିତ ସେଟିଂସକୁ ଅନୁମତି ଦିଅନ୍ତୁ"</string>
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"ଏହି ଆପରେ ଡିଫଲ୍ଟ ଭାବରେ ଆପଣ ଚୟନ କରିଥିବା କିଛି କାର୍ଯ୍ୟକଳାପ।"</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"ୱିଜେଟ୍‌ ତିଆରି କରିବା ଏବଂ ସେଗୁଡ଼ିକର ଡାଟା ଆକ୍ସେସ୍‌ କରିବା ପାଇଁ ଏହି ଆପ୍‌କୁ ଅନୁମତି ଦେବାକୁ ଆପଣ ବାଛିଛନ୍ତି।"</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"କୌଣସି ଡିଫଲ୍ଟ ସେଟ୍‍ ହୋଇନାହିଁ।"</string>
@@ -2093,9 +2103,10 @@
     <string name="internal_storage" msgid="999496851424448809">"ଇଣ୍ଟର୍ନଲ୍‌ ଷ୍ଟୋରେଜ୍‌"</string>
     <string name="recompute_size" msgid="1098091228370999128">"ଆକାରକୁ ପୁଣି ଗଣୁଛି…"</string>
     <string name="clear_data_dlg_title" msgid="180446967743732410">"ଆପ୍‌ର ଡାଟା ଡିଲିଟ୍‌ କରିବେ?"</string>
-    <string name="clear_data_dlg_text" msgid="1107610960337399006">"ଏହି ଆପର ଡାଟା ସ୍ଥାୟୀ ଭାବେ ଡିଲିଟ ହୋଇଯିବ। ଏଥିରେ ଫାଇଲ, ସେଟିଂସ, ଡାଟାବେସ ଏବଂ ଅନ୍ୟ ଆପ ଡାଟା ଅନ୍ତର୍ଭୁକ୍ତ।"</string>
+    <string name="clear_data_dlg_text" msgid="3440011276559762619">"ଫାଇଲ ଏବଂ ସେଟିଂସ ସମେତ ଏହି ଆପର ଡାଟା ଏଇ ଡିଭାଇସରୁ ସ୍ଥାୟୀ ଭାବେ ଡିଲିଟ ହୋଇଯିବ"</string>
     <string name="dlg_ok" msgid="1421350367857960997">"ଠିକ୍‌ ଅଛି"</string>
     <string name="dlg_cancel" msgid="5164705061530774899">"ବାତିଲ କରନ୍ତୁ"</string>
+    <string name="dlg_delete" msgid="1790919205039397659">"ଡିଲିଟ କରନ୍ତୁ"</string>
     <string name="app_not_found_dlg_title" msgid="7122106240981109930"></string>
     <string name="app_not_found_dlg_text" msgid="8634675268730513704">"ଇନଷ୍ଟଲ୍‌ ହୋଇଥିବା ଆପ୍‌ଗୁଡ଼ିକର ତାଲିକାରେ ଏହି ଆପ୍‌ଟି ମିଳିଲାନାହିଁ।"</string>
     <string name="clear_failed_dlg_text" msgid="6866741916836125732">"ଆପ୍ ପାଇଁ ଷ୍ଟୋରେଜ୍‌କୁ ଖାଲି କରିପାରିବ ନାହିଁ|"</string>
@@ -4401,10 +4412,8 @@
       <item quantity="one"><xliff:g id="COUNT_0">%d</xliff:g>ଟି ଅବ୍ୟବହୃତ ଆପ୍</item>
     </plurals>
     <string name="unused_apps_category" msgid="8954930958175500851">"ଅବ୍ୟବହୃତ ଆପ ସେଟିଂସ"</string>
-    <!-- no translation found for unused_apps_switch (7595419855882245772) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch_summary (2171098908014596802) -->
-    <skip />
+    <string name="unused_apps_switch" msgid="7595419855882245772">"ବ୍ୟବହାର ହେଉନଥିଲେ ଆପ କାର୍ଯ୍ୟକଳାପ ବିରତ କର"</string>
+    <string name="unused_apps_switch_summary" msgid="2171098908014596802">"ଅନୁମତିଗୁଡ଼ିକୁ କାଢ଼ି ଦିଅନ୍ତୁ, ଅସ୍ଥାୟୀ ଫାଇଲଗୁଡ଼ିକୁ ଡିଲିଟ କରନ୍ତୁ ଏବଂ ବିଜ୍ଞପ୍ତିଗୁଡ଼ିକୁ ବନ୍ଦ କରନ୍ତୁ"</string>
     <string name="filter_all_apps" msgid="6645539744080251371">"ସମସ୍ତ ଆପସ୍‌"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"ଇନ୍‌ଷ୍ଟଲ୍‌ ହୋଇଥିବା ଆପ୍‌ଗୁଡ଼ିକ"</string>
     <string name="filter_instant_apps" msgid="2292108467020380068">"ଇନଷ୍ଟାଣ୍ଟ୍ ଆପ୍ସ"</string>
@@ -5060,10 +5069,8 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"ଏହି ଡିଭାଇସ୍‌ <xliff:g id="ORGANIZATION_NAME">%s</xliff:g> ଦ୍ୱାରା ପରିଚାଳିତ ହେଉଛି।"</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"ଅଧିକ ଜାଣନ୍ତୁ"</string>
-    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
-    <skip />
-    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
-    <skip />
+    <string name="blocked_by_restricted_settings_title" msgid="7334715011474037399">"ପ୍ରତିବନ୍ଧିତ ସେଟିଂ"</string>
+    <string name="toast_allows_restricted_settings_successfully" msgid="1219116121291466102">"<xliff:g id="APP_NAME">%s</xliff:g> ପାଇଁ ପ୍ରତିବନ୍ଧିତ ସେଟିଂସକୁ ଅନୁମତି ଦିଆଯାଇଛି"</string>
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"ଆପଣଙ୍କ ସୁରକ୍ଷା ପାଇଁ ଏହି ସେଟିଂ ବର୍ତ୍ତମାନ ଅନୁପଲବ୍ଧ ଅଛି।"</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"ଫାଇନାନ୍ସଡ୍ ଡିଭାଇସ୍ ସୂଚନା"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"ଆପଣଙ୍କ କ୍ରେଡିଟ ପ୍ରଦାନକାରୀ ଏହି ଡିଭାଇସରେ ସେଟିଂସ ପରିବର୍ତ୍ତନ ଏବଂ ସଫ୍ଟୱେର ଇନଷ୍ଟଲ କରିପାରିବେ।\n\nଯଦି ଆପଣ କୌଣସି ପେମେଣ୍ଟ ହରାନ୍ତି, ତେବେ ଆପଣଙ୍କ ଡିଭାଇସ ଲକ ହୋଇଯିବ।\n\nଅଧିକ ଜାଣିବାକୁ, ଆପଣଙ୍କ କ୍ରେଡିଟ ପ୍ରଦାନକାରୀ ସହ ଯୋଗାଯୋଗ କରନ୍ତୁ।"</string>
@@ -5546,8 +5553,7 @@
     <string name="lockscreen_privacy_controls_summary" msgid="2769166101644452893">"ଲକ ସ୍କ୍ରିନରୁ ଏକ୍ସଟର୍ନଲ ଡିଭାଇସଗୁଡ଼ିକ ପାଇଁ ନିୟନ୍ତ୍ରଣଗୁଡ଼ିକୁ ଦେଖାନ୍ତୁ"</string>
     <string name="lockscreen_trivial_controls_setting_toggle" msgid="8211063535536295676">"ଲକ କରାଯାଇଥିବା ଡିଭାଇସରୁ ନିୟନ୍ତ୍ରଣ କରନ୍ତୁ"</string>
     <string name="lockscreen_trivial_controls_summary" msgid="680581904143387225">"ଯଦି Device Controls ଆପ ଦ୍ୱାରା ଅନୁମତି ଦିଆଯାଏ, ତେବେ ଆପଣଙ୍କ ଫୋନ କିମ୍ବା ଟାବଲେଟକୁ ଅନଲକ ନକରି ଏକ୍ସଟର୍ନଲ ଡିଭାଇସଗୁଡ଼ିକୁ ନିୟନ୍ତ୍ରଣ କରନ୍ତୁ"</string>
-    <!-- no translation found for lockscreen_trivial_disabled_controls_summary (7593626010580689155) -->
-    <skip />
+    <string name="lockscreen_trivial_disabled_controls_summary" msgid="7593626010580689155">"ବ୍ୟବହାର କରିବା ପାଇଁ, ପ୍ରଥମେ \"ଡିଭାଇସ ନିୟନ୍ତ୍ରଣଗୁଡ଼ିକୁ ଦେଖାନ୍ତୁ\"କୁ ଚାଲୁ କରନ୍ତୁ"</string>
     <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"ଉପଲବ୍ଧ ହେଲେ ଡବଲ-ଲାଇନ ଘଣ୍ଟା ଦେଖାନ୍ତୁ"</string>
     <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"ଡବଲ-ଲାଇନ ଘଣ୍ଟା"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
