--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -221,11 +221,15 @@
     <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Языки приложений"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Выберите язык для каждого приложения"</string>
     <string name="app_locale_picker_title" msgid="8423365003726200684">"Язык приложения"</string>
+    <string name="warnings_title" msgid="613849105118598110">"Обновите приложение"</string>
+    <string name="warnings_summary" msgid="5600524378302608542">"Чтобы добавить в приложение новые языки, его нужно обновить."</string>
+    <string name="warnings_button_update" msgid="8819670776624561500">"Обновить"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Рекомендуемые языки"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Все языки"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Язык системы"</string>
     <string name="preference_of_system_locale_summary" msgid="7828965109093154187">"По умолчанию – <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g>"</string>
-    <string name="no_multiple_language_supported" msgid="1683023807955740826">"В этом приложении по умолчанию выбран <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g>. Оно поддерживает только один язык."</string>
+    <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Для этого приложения не поддерживается выбор языка в настройках."</string>
+    <string name="desc_disallow_locale_change_in_settings" msgid="8355972147053068698">"Для этого приложения нельзя выбрать язык в настройках."</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="one">Удалить выбранные языки?</item>
       <item quantity="few">Удалить выбранные языки?</item>
@@ -344,7 +348,8 @@
     <string name="security_status_title" msgid="6958004275337618656">"Статус защиты"</string>
     <string name="security_dashboard_summary" msgid="7571035662779425918">"Блокировка экрана, сервис \"Найти устройство\", безопасность приложений"</string>
     <string name="safety_center_title" msgid="7732397372178774777">"Защита и конфиденциальность"</string>
-    <string name="safety_center_summary" msgid="4297140049215322727">"Разрешения, блокировка экрана, безопасность приложений"</string>
+    <!-- no translation found for safety_center_summary (3554867379951053869) -->
+    <skip />
     <string name="security_settings_face_preference_summary" msgid="6675126437396914838">"Изображение добавлено"</string>
     <string name="security_settings_face_preference_summary_none" msgid="5952752252122581846">"Нажмите, чтобы настроить фейсконтроль."</string>
     <string name="security_settings_face_preference_title" msgid="2126625155005348417">"Фейсконтроль"</string>
@@ -462,6 +467,8 @@
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_4" msgid="4983770600405797515">"Вы и ваш ребенок в любой момент можете удалить модель и снимки отпечатка пальца или отключить функцию разблокировки по отпечатку пальца в настройках. Изображения и модель хранятся на телефоне, пока вы не удалите их."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_5" msgid="2018885671994058605">"В некоторых ситуациях телефон может быть разблокирован без вашего желания, например если кто-то приложит его к вашему пальцу."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_5" msgid="8356551505082794682">"В некоторых ситуациях телефон может быть разблокирован без желания ребенка, например если кто-то приложит устройство к пальцу ребенка."</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_6" msgid="5314031490467481499">"Рекомендуем использовать защитное стекло или пленку из серии \"Сделано для Google\". Устройства с другими стеклами или пленками могут не распознавать отпечаток пальца."</string>
+    <string name="security_settings_fingerprint_v2_enroll_introduction_footer_message_consent_6" msgid="3563942520716110478">"Рекомендуем использовать защитное стекло или пленку из серии \"Сделано для Google\". Устройства с другими стеклами или пленками могут не распознавать отпечаток пальца ребенка."</string>
     <string name="security_settings_fingerprint_v2_enroll_introduction_message_learn_more" msgid="5856010507790137793"></string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_try_adjusting" msgid="3855444121278320304">"Каждый раз немного меняйте положение пальца."</string>
     <string name="security_settings_fingerprint_v2_enroll_acquire_partially_detected" msgid="8330287007361798356">"Приложите центр пальца к этому значку."</string>
@@ -515,7 +522,8 @@
     <string name="security_settings_fingerprint_enroll_repeat_message" msgid="5382958363770893577">"Немного перемещайте палец, чтобы отсканировать его полностью."</string>
     <string name="security_settings_udfps_enroll_repeat_message" msgid="2213106975297867798">"Нажимайте и удерживайте значок каждый раз, когда он перемещается. Так отпечаток пальца будет более точным."</string>
     <string name="security_settings_udfps_enroll_fingertip_title" msgid="4123142574168831116">"Коснитесь датчика и удерживайте его подушечкой пальца"</string>
-    <string name="security_settings_udfps_enroll_edge_title" msgid="6137605344819152477">"Осталось отсканировать края пальца"</string>
+    <string name="security_settings_udfps_enroll_left_edge_title" msgid="1944076382202470458">"Приложите левый край пальца"</string>
+    <string name="security_settings_udfps_enroll_right_edge_title" msgid="9036744264606447490">"Приложите правый край пальца"</string>
     <string name="security_settings_udfps_enroll_edge_message" msgid="4455253923746607702">"Наклоните палец набок, нажмите на датчик и удерживайте. Затем наклоните палец на другой бок и повторите действия."</string>
     <string name="security_settings_udfps_enroll_repeat_a11y_message" msgid="2785464357615568197">"Так отпечаток пальца будет более точным"</string>
     <string name="security_settings_udfps_enroll_progress_a11y_message" msgid="6183535114682369699">"Процент выполнения задачи по добавлению отпечатка пальца: <xliff:g id="PERCENTAGE">%d</xliff:g>."</string>
@@ -587,10 +595,14 @@
     <string name="security_settings_fingerprint_enroll_disclaimer_lockscreen_disabled" msgid="4260983700868889294">" Настройка блокировки экрана отключена. За дополнительной информацией обращайтесь к администратору. "<annotation id="admin_details">"Подробнее…"</annotation>\n\n"Вы по-прежнему можете совершать покупки и открывать приложения с помощью отпечатка пальца. "<annotation id="url">"Подробнее…"</annotation></string>
     <string name="security_settings_fingerprint_enroll_lift_touch_again" msgid="2590665137265458789">"Поднимите палец и снова приложите его к сканеру."</string>
     <string name="security_settings_fingerprint_bad_calibration" msgid="598502302101068608">"Невозможно использовать сканер отпечатков пальцев. Обратитесь в сервисный центр."</string>
-    <string name="security_advanced_settings" msgid="1750030247647385675">"Расширенные настройки"</string>
-    <string name="security_advanced_settings_work_profile_settings_summary" msgid="4953206043812472343">"Блокировка рабочего профиля, Smart Lock"</string>
-    <string name="security_advanced_settings_no_work_profile_settings_summary" msgid="3596485752607184790">"Smart Lock и другое"</string>
-    <string name="security_advanced_settings_keywords" msgid="5428731800873497281">"Расширенные настройки"</string>
+    <!-- no translation found for security_advanced_settings (6260756619837834042) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_work_profile_settings_summary (7295451997961973175) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_no_work_profile_settings_summary (345336447137417638) -->
+    <skip />
+    <!-- no translation found for security_advanced_settings_keywords (5294945170370974974) -->
+    <skip />
     <string name="fingerprint_add_max" msgid="8639321019299347447">"Максимальное количество отпечатков пальца, которые можно добавить: <xliff:g id="COUNT">%d</xliff:g>"</string>
     <string name="fingerprint_intro_error_max" msgid="4431784409732135610">"Вы уже добавили максимальное количество отпечатков"</string>
     <string name="fingerprint_intro_error_unknown" msgid="877005321503793963">"Больше нельзя добавить отпечатки пальцев"</string>
@@ -1377,7 +1389,7 @@
     <string name="auto_brightness_off_summary" msgid="4993150980274474226">"Не учитывать уровень освещенности"</string>
     <string name="auto_brightness_very_high_summary" msgid="2784981315548144255">"Батарея разряжается быстрее"</string>
     <string name="auto_brightness_disclaimer" msgid="1868395832774087351">"Яркость регулируется с учетом уровня освещенности. При необходимости ее можно временно изменить."</string>
-    <string name="auto_brightness_description" msgid="6807117118142381193">"Яркость экрана будет настраиваться автоматически в зависимости от окружающих условий и ваших действий. Вы сможете регулировать ее и вручную, и тогда ваши предпочтения будут сохраняться."</string>
+    <string name="auto_brightness_description" msgid="6807117118142381193">"Яркость экрана будет настраиваться автоматически в зависимости от окружающих условий и ваших действий. Дополнительно ее можно регулировать вручную, чтобы система учитывала ваши предпочтения."</string>
     <string name="display_white_balance_title" msgid="2624544323029364713">"Баланс белого на экране"</string>
     <string name="display_white_balance_summary" msgid="7625456704950209050"></string>
     <string name="peak_refresh_rate_title" msgid="1878771412897140903">"Плавный экран"</string>
@@ -1400,7 +1412,7 @@
     <string name="auto_rotate_summary_no_permission" msgid="1025061139746254554">"Для работы функции \"Распознавание лиц\" нужен доступ к камере. Нажмите, чтобы настроить разрешения для сервисов персонализации устройств."</string>
     <string name="auto_rotate_manage_permission_button" msgid="2591146085906382385">"Управление разрешениями"</string>
     <string name="night_display_title" msgid="8532432776487216581">"Ночная подсветка"</string>
-    <string name="night_display_text" msgid="4789324042428095383">"С ночной подсветкой экран приобретает желтоватый оттенок. Это снижает напряжение глаз при тусклом свете и может помочь вам быстрее заснуть."</string>
+    <string name="night_display_text" msgid="4789324042428095383">"С ночной подсветкой экран приобретает желтоватый оттенок. Это снижает напряжение глаз и может помочь вам быстрее заснуть."</string>
     <string name="night_display_auto_mode_title" msgid="5869128421470824381">"Расписание"</string>
     <string name="night_display_auto_mode_never" msgid="2721729920187175239">"Нет"</string>
     <string name="night_display_auto_mode_custom" msgid="3938791496034086916">"В выбранное время"</string>
@@ -1949,8 +1961,7 @@
     <string name="module_license_title" msgid="8705484239826702828">"Лицензии обновления системы через Google Play"</string>
     <string name="terms_title" msgid="2071742973672326073">"Условия использования"</string>
     <string name="webview_license_title" msgid="5832692241345780517">"Системная лицензия WebView"</string>
-    <!-- no translation found for wallpaper_attributions (4323659759250650736) -->
-    <skip />
+    <string name="wallpaper_attributions" msgid="4323659759250650736">"Создатели обоев"</string>
     <string name="wallpaper_attributions_values" msgid="987277439026021925">"Спутниковые фотографии:\n© 2014 CNES/Astrium, DigitalGlobe, Bluesky"</string>
     <string name="settings_manual_activity_title" msgid="1682978148920788484">"Руководство пользователя"</string>
     <string name="settings_manual_activity_unavailable" msgid="2514549851682321576">"Не удалось загрузить руководство пользователя."</string>
@@ -2105,8 +2116,7 @@
     <string name="enable_text" msgid="8570798764647110430">"Включить"</string>
     <string name="clear_user_data_text" msgid="6773186434260397947">"Очистить хранилище"</string>
     <string name="app_factory_reset" msgid="8974044931667015201">"Удалить обновления"</string>
-    <!-- no translation found for app_restricted_settings_lockscreen_title (5993061278264872648) -->
-    <skip />
+    <string name="app_restricted_settings_lockscreen_title" msgid="5993061278264872648">"Разрешить доступ к настройкам"</string>
     <string name="auto_launch_enable_text" msgid="8912714475823807798">"Некоторые выбранные вами действия выполняются в этом приложении по умолчанию."</string>
     <string name="always_allow_bind_appwidgets_text" msgid="2069415023986858324">"Это приложение может создавать виджеты и получать их данные."</string>
     <string name="auto_launch_disable_text" msgid="502648841250936209">"Значения по умолчанию не установлены."</string>
@@ -2141,9 +2151,10 @@
     <string name="internal_storage" msgid="999496851424448809">"Внутр. накопитель"</string>
     <string name="recompute_size" msgid="1098091228370999128">"Повторное вычисление размера..."</string>
     <string name="clear_data_dlg_title" msgid="180446967743732410">"Удалить данные приложения?"</string>
-    <string name="clear_data_dlg_text" msgid="1107610960337399006">"Данные этого приложения (включая файлы, базы данных, настройки и т. д.) будут удалены без возможности восстановления."</string>
+    <string name="clear_data_dlg_text" msgid="3440011276559762619">"Данные приложения, включая файлы и настройки, будут навсегда удалены с этого устройства."</string>
     <string name="dlg_ok" msgid="1421350367857960997">"ОК"</string>
     <string name="dlg_cancel" msgid="5164705061530774899">"Отмена"</string>
+    <string name="dlg_delete" msgid="1790919205039397659">"Удалить"</string>
     <string name="app_not_found_dlg_title" msgid="7122106240981109930"></string>
     <string name="app_not_found_dlg_text" msgid="8634675268730513704">"Приложение не найдено в списке установленных."</string>
     <string name="clear_failed_dlg_text" msgid="6866741916836125732">"Не удалось очистить хранилище."</string>
@@ -2374,7 +2385,7 @@
     <string name="accessibility_text_reading_options_suggestion_title" msgid="2492155642665312733">"Настройки отображения текста"</string>
     <string name="accessibility_text_reading_preview_mail_subject" msgid="4597374768612733616">"Тема: Дизайн воздушного шара"</string>
     <string name="accessibility_text_reading_preview_mail_from" msgid="1797499780365288020">"От: Борис"</string>
-    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"Доброе утро!\n\nКак дела с дизайном? Он будет готов до того, как мы начнем разработку новых всплывающих окон?"</string>
+    <string name="accessibility_text_reading_preview_mail_content" msgid="8078152365771951802">"Доброе утро!\n\nКак дела с дизайном? Он будет готов до того, как мы начнем разработку новых шаров?"</string>
     <string name="accessibility_text_reading_reset_button_title" msgid="5960753279788187669">"Сбросить настройки"</string>
     <string name="accessibility_text_reading_confirm_dialog_title" msgid="2865331351355690389">"Сбросить настройки текста и размера экрана?"</string>
     <string name="accessibility_text_reading_confirm_dialog_message" msgid="517090197003540264">"Будут восстановлены исходные параметры текста и размера экрана, заданные на телефоне."</string>
@@ -4527,10 +4538,8 @@
       <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g> неиспользуемого приложения</item>
     </plurals>
     <string name="unused_apps_category" msgid="8954930958175500851">"Настройки неиспользуемых приложений"</string>
-    <!-- no translation found for unused_apps_switch (7595419855882245772) -->
-    <skip />
-    <!-- no translation found for unused_apps_switch_summary (2171098908014596802) -->
-    <skip />
+    <string name="unused_apps_switch" msgid="7595419855882245772">"Приостановить работу в неактивный период"</string>
+    <string name="unused_apps_switch_summary" msgid="2171098908014596802">"Удалить разрешения и временные файлы, прекратить отправку уведомлений"</string>
     <string name="filter_all_apps" msgid="6645539744080251371">"Все приложения"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"Установленные приложения"</string>
     <string name="filter_instant_apps" msgid="2292108467020380068">"Приложения с мгновенным запуском"</string>
@@ -5224,10 +5233,8 @@
     <string name="do_disclosure_with_name" msgid="867544298924410766">"Этим устройством управляет <xliff:g id="ORGANIZATION_NAME">%s</xliff:g>."</string>
     <string name="do_disclosure_learn_more_separator" msgid="5714364437437041671">" "</string>
     <string name="learn_more" msgid="3534519107947510952">"Подробнее"</string>
-    <!-- no translation found for blocked_by_restricted_settings_title (7334715011474037399) -->
-    <skip />
-    <!-- no translation found for toast_allows_restricted_settings_successfully (1219116121291466102) -->
-    <skip />
+    <string name="blocked_by_restricted_settings_title" msgid="7334715011474037399">"Настройки с ограниченным доступом"</string>
+    <string name="toast_allows_restricted_settings_successfully" msgid="1219116121291466102">"Приложению \"<xliff:g id="APP_NAME">%s</xliff:g>\" разрешен доступ к настройкам."</string>
     <string name="blocked_by_restricted_settings_content" msgid="3628660029601161080">"В целях безопасности доступ к этой функции пока ограничен."</string>
     <string name="financed_privacy_settings" msgid="2575114436197204145">"Информация о купленном в кредит устройстве"</string>
     <string name="financed_privacy_intro" msgid="5458393846604867947">"Кредитор может изменять настройки устройства и устанавливать на него ПО.\n\nЕсли вы пропустите платеж, ваше устройство будет заблокировано.\n\nЗа дополнительной информацией обращайтесь к кредитору."</string>
@@ -5724,8 +5731,7 @@
     <string name="lockscreen_privacy_controls_summary" msgid="2769166101644452893">"Показывать элементы управления внешними устройствами на заблокированном экране"</string>
     <string name="lockscreen_trivial_controls_setting_toggle" msgid="8211063535536295676">"Управление с заблокированного устройства"</string>
     <string name="lockscreen_trivial_controls_summary" msgid="680581904143387225">"Вы можете управлять внешними устройствами с заблокированного телефона или планшета, установив нужное разрешение в приложении \"Управление устройствами\"."</string>
-    <!-- no translation found for lockscreen_trivial_disabled_controls_summary (7593626010580689155) -->
-    <skip />
+    <string name="lockscreen_trivial_disabled_controls_summary" msgid="7593626010580689155">"Чтобы использовать эту функцию, включите параметр \"Показывать виджеты управления устройством\""</string>
     <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"Показывать вертикальные часы, если они доступны"</string>
     <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"Вертикальные часы"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
